--- a/product/视频服务/实时音视频/高级功能/音视频内容安全审核/接入流程.md
+++ b/product/视频服务/实时音视频/高级功能/音视频内容安全审核/接入流程.md
@@ -81,24 +81,24 @@ trtc://trtc.tencentcloudapi.com/moderation?SdkAppId=xxxx&RoomId=xxxx&UserId=xxxx
 <td>可选参数，该字段表示接受审核信息回调的地址，格式为 URL 链接默认格式。配置成功后，审核过程中产生的违规音频片段将通过此接口发送。回调返回内容格式请参见 <a href="https://cloud.tencent.com/document/product/1219/53257#.E7.A4.BA.E4.BE.8B2-.E5.9B.9E.E8.B0.83.E7.AD.BE.E5.90.8D.E7.A4.BA.E4.BE.8B">回调签名示例</a>。</td></tr>
 </tbody></table>
 
-     该接口需注意以下几点：
-     - **BizType**
-     用户的审核策略，可以通过控制台上的 [策略管理](https://console.cloud.tencent.com/cms/livevideo/strategy) 根据不同的需求创建不同的审核策略，在开通服务时，会自动创建一个 BizType 为“default”的审核策略，测试时，可使用该 BizType 传入。
-     ![](https://qcloudimg.tencent-cloud.cn/raw/645be687541a6033be0ff5e316df83b0.png)
-     - **Type**
-     根据实际的应用类型进行传入，TRTC实时音视频根据应用类型调用不同的产品的接口。（例如：实时语音房场景调用 ams 产品的接口，Type 输入 LIVE_AUDIO；视频聊天调用 vm 产品的接口，Type 填写 LIVE_VIDEO）。
-     - **CallbackUrl**
-     该地址用于用户接口直播过程中和直播结束的审核结果，可以在控制台配置界面中设置，也可以通过接口传入。回调格式同 [查询任务详情接口](https://cloud.tencent.com/document/product/1219/53256) 的输出参数。
-     - **Tasks.N.Input.Url**
-     填入 [第2步](#step2) 拼装的 TRTC 审核 URL。输入示例：
-     ![](https://qcloudimg.tencent-cloud.cn/raw/1f73346ea902eb1464efbba0ecd6ea9f.png)
-4. 创建审核任务成功，腾讯云内容安全审核服务会返回 task_id、task_id 作为内容审核针对该房间审核的唯一ID。
+	该接口需注意以下几点：
+	- **BizType**
+	用户的审核策略，可以通过控制台上的 [策略管理](https://console.cloud.tencent.com/cms/livevideo/strategy) 根据不同的需求创建不同的审核策略，在开通服务时，会自动创建一个 BizType 为“default”的审核策略，测试时，可使用该 BizType 传入。
+	![](https://qcloudimg.tencent-cloud.cn/raw/645be687541a6033be0ff5e316df83b0.png)
+	- **Type**
+	根据实际的应用类型进行传入，TRTC实时音视频根据应用类型调用不同的产品的接口。（例如：实时语音房场景调用 ams 产品的接口，Type 输入 LIVE_AUDIO；视频聊天调用 vm 产品的接口，Type 填写 LIVE_VIDEO）。
+	- **CallbackUrl**
+	该地址用于用户接口直播过程中和直播结束的审核结果，可以在控制台配置界面中设置，也可以通过接口传入。回调格式同 [查询任务详情接口](https://cloud.tencent.com/document/product/1219/53256) 的输出参数。
+	- **Tasks.N.Input.Url**
+	填入 [第2步](#step2) 拼装的 TRTC 审核 URL。输入示例：
+	![](https://qcloudimg.tencent-cloud.cn/raw/1f73346ea902eb1464efbba0ecd6ea9f.png)
+4. 创建审核任务成功，腾讯云内容安全审核服务会返回 TaskId、TaskId 作为内容审核针对该房间审核的唯一ID。
 5. 在审核过程中，用户的回调服务器会持续接收到内容安全审核服务的审核结果，针对 TRTC 是在直播过程中，每个用户的音频切片和图片截帧的审核结果。用户可以根据该结果决定是否封禁直播间，或者是针对直播间发出警告。
-6. 在直播结束后，用户需要调用结束审核接口（传入创建审核时的 task_id），关闭直播间审核。
+6. 在直播结束后，用户需要调用结束审核接口（传入创建审核时的 TaskId），关闭直播间审核。
 7. 内容安全审核服务在接收到结束审核请求后，停止拉取该直播间的数据流，并根据审核策略，推导出该直播间的最终审核结果，同时发送审核结束的回调信息给用户。TRTC 回调的片段会存储在 cos 上面，文件名为：
 ```
-trtc/{{SdkAppId}}/screenshot_{{roomid}}_{{userid}}{{timestamp}}.jpg（图片格式）
-trtc/{{SdkAppId}}/audio{{roomid}}_{{userid}}_{{timestamp}}.mp3（音频格式）
+trtc/{{SdkAppId}}/screenshot_{{RoomId}}_{{UserId}}{{timestamp}}.jpg（图片格式）
+trtc/{{SdkAppId}}/audio{{RoomId}}_{{UserId}}_{{timestamp}}.mp3（音频格式）
 ```
 >!
 >-  **混流的 UserId 统一为 mixer**。
@@ -111,7 +111,7 @@ trtc/{{SdkAppId}}/audio{{roomid}}_{{userid}}_{{timestamp}}.mp3（音频格式）
 
 ### 2. 内容安全拉取 TRTC 的数据流是否需要收费？
 
-内容安全是以观众身份从 TRTC 拉取数据流进行审核的，TRTC 默认计费方式按订阅时长（拉流）计费，所以这里会产生费用，具体的收费规则可以咨询 TRTC 运营。
+内容安全是以观众身份从 TRTC 拉取数据流进行审核的，TRTC 默认计费方式按订阅时长（拉流）计费，所以这里会产生费用，具体的收费请参见 [音视频计费时长说明](https://cloud.tencent.com/document/product/647/44248)。
 >!
 >- 创建审核任务的 UserId 不能同房间内的任何一个 UserId 相同。
 >- TRTC RoomId 的限制是 uint，房间号取值区间为1 - 4294967295，由开发者自行维护和分配。
@@ -131,7 +131,7 @@ trtc/{{SdkAppId}}/audio{{roomid}}_{{userid}}_{{timestamp}}.mp3（音频格式）
 
 ### 7. 多人语聊房中，多路流，怎么判断谁违规了吗？
 
-目前只能通过我们返回的回调上的地址去区分，我们回调的片段会存储在 cos 上面，文件名是 `trtc_[roomid]_[userid]_timestamp` 的格式。
+目前只能通过我们返回的回调上的地址去区分，我们回调的片段会存储在 cos 上面，文件名是 `trtc_[RoomId]_[UserId]_timestamp` 的格式。
 
 ### 8. 对于拼装的 TRTC 审核 URL 有什么需要注意的点？
 由于 UserSig 中包含有特殊符号，拼装成 url 前要先进行 escape 才能放到 URL 中。
