--- a/product/视频服务/直播/公告与动态/关于云直播时移功能正式计费公告.md
+++ b/product/视频服务/直播/公告与动态/关于云直播时移功能正式计费公告.md
@@ -5,7 +5,7 @@
 - **时移总时长**（单位：分钟×天）为**时移文件时长**（单位：分钟）与**时移配置天数**（单位：天）的**乘积值**。
 >?
 >- 时移文件时长：开通时移功能的直播录制文件时长（单位：分钟）。
->- 时移配置天数：配置的时移可回看的天数（单位：天，取值：1-30天）。
+>- 时移配置天数：配置的时移可回看的天数（单位：天，取值：1天-30天）。
 - 开通直播时移功能需首先开通**直播录制**和**点播 VOD 存储**，录制的视频编解码格式应为 HLS，时移配置天数需小于等于录制存储天数。
 - 直播时移功能仍需通过工单方式申请开通。
 
