--- a/product/大数据与AI/人脸识别/购买指南/计费概述.md
+++ b/product/大数据与AI/人脸识别/购买指南/计费概述.md
@@ -98,7 +98,7 @@
 
 |<nobr>SDK 名称</nobr>|<nobr>内容说明</nobr>|<nobr>50 - 1000个</nobr>|<nobr>1001 - 5000个</nobr>|<nobr>5000 - 1万个</nobr>|<nobr>1万以上</nobr>|
 |-|-|-|-|-|-|
-|离线人脸检测 SDK|人脸检测（含检测配准、跟踪优选、质量分判断）|68元/个|58元/个|48元/个|<nobr>[联系商务](https://wpa1.qq.com/RCj685pf?_type=wpa&qidian=true)<nobr>|
+|离线人脸检测 SDK|人脸检测（含检测配准、检测优选、质量分判断）|68元/个|58元/个|48元/个|<nobr>[联系商务](https://wpa1.qq.com/RCj685pf?_type=wpa&qidian=true)<nobr>|
 |离线活体检测 SDK|含人脸检测所有能力和活体检测。<br>活体检测分为红外活体、3D 结构光活体、单目活体。<br>根据设备类型三选一。|88元/个|78元/个|68元/个|<nobr>[联系商务](https://wpa1.qq.com/RCj685pf?_type=wpa&qidian=true)</nobr>|
 |离线人脸识别 SDK|含人脸检测和活体检测所有能力。并支持1:1和1:N人脸识别。|118元/个|95元/个|88元/个|<nobr>[联系商务](https://wpa1.qq.com/RCj685pf?_type=wpa&qidian=true)</nobr>|
 
