--- a/product/视频服务/点播/开发者指南/视频加密/1视频加密综述.md
+++ b/product/视频服务/点播/开发者指南/视频加密/1视频加密综述.md
@@ -21,9 +21,7 @@
 	<tr>
 	  <td rowspan="2">视频加密</td>
 	  <td>HLS 普通加密</td>
-		<td><li>基于 HLS 提供的 <a href=https://tools.ietf.org/html/draft-pantos-http-live-streaming-23?spm=a2c4g.11186623.2.31.409c6a6aYf9Rn8>AES encryption </a>通用方案</li><li>有部分浏览器插件和灰产工具能实现对该加密方式的破解</li><dx-alert infotype="notice" title="">
-因该加密方案方式的安全门槛较低，**已不再推荐使用**。
-</dx-alert></td>
+		<td><li>基于 HLS 提供的 <a href=https://tools.ietf.org/html/draft-pantos-http-live-streaming-23?spm=a2c4g.11186623.2.31.409c6a6aYf9Rn8>AES encryption </a>通用方案</li><li>有部分浏览器插件和灰产工具能实现对该加密方式的破解</li></td>
 		<td>较高</td>
 	</tr>
 	<tr>
@@ -32,7 +30,9 @@
 		<td>高</td>
 	</tr>
 </table>
-
+<dx-alert infotype="notice" title="">
+因 HLS 普通加密的安全门槛较低，**已不再推荐使用**。
+</dx-alert>
 
 * [防盗链](https://cloud.tencent.com/document/product/266/11243)  主要用于控制视频播放请求来源的合法性，但防盗链不对视频内容加密，用户下载后可以二次分发，在版权保护上的安全级别不高。
 * 视频加密是一种使用密钥对内容本身加密的手段，他人获取后无法直接播放。只有当终端通过业务后台鉴权，获得解密密钥后才能播放。推荐使用 [HLS 私有加密](https://cloud.tencent.com/document/product/266/73073)，为视频内容提供更高安全级别的保障。
