Update and rename 设置实例维护时间 to 设置实例维护时间.md

--- a/product/数据库/云数据库PostgreSQL/操作指南/实例管理/设置实例维护时间.md
+++ b/product/数据库/云数据库PostgreSQL/操作指南/实例管理/设置实例维护时间.md
@@ -14,7 +14,7 @@
 1. 登录 [PostgreSQL 控制台](https://console.cloud.tencent.com/postgres)，在实例列表，单击实例 ID 或**操作**列的**管理**，进入实例详情页面。
 2. 在详情页的**维护信息**处，单击**修改**。
 ![](https://main.qcloudimg.com/raw/04ffe02aefb9af0734812f53ed9eb052.png)
-3. 在弹出的对话框，选择您所需的“维护周期”和“维护时间”，单击**确定**。
+3. 在弹出的对话框，选择您所需的**维护周期**和**维护时间**，单击**确定**。
 ![](https://main.qcloudimg.com/raw/a6336c8cf63509c7ee119bb2d25fe23d.png)
 
 ### [立即切换](id:lijiqiehuan)
