--- a/product/安全服务/数据加密服务/产品简介/产品功能.md
+++ b/product/安全服务/数据加密服务/产品简介/产品功能.md
@@ -111,7 +111,7 @@
 
 ## 托管物理密码机 GHSM
 	
-通用服务器密码机CryptoEngine：满足《GM/T 0030 服务器密码机技术规范》要求，提供国际通用的密码服务接口，能独立或并行为多个应用实体提供密码服务和密钥管理服务的加密实例。
+通用服务器密码机 CryptoEngine：满足《GM/T 0030 服务器密码机技术规范》要求，提供国际通用的密码服务接口，能独立或并行为多个应用实体提供密码服务和密钥管理服务的加密实例。
 
 ### 加密算法
 * **对称算法：**SM4/DES/3DES/AES128/AES192/AES256
@@ -119,9 +119,9 @@
 * **摘要算法：**SM3、SHA1、SHA224/SHA256/SHA384/SHA512、SHA3-224/SHA3-256/SHA3-384/SHA3-512
 
 ### 基础服务功能
-* 支持国密GMT-0018-密码设备应用接口规范；
-* 支持PKCS#11接口规范；
-* 支持SUN JCE接口规范；
+* 支持国密 GMT-0018-密码设备应用接口规范。
+* 支持 PKCS#11接口规范。
+* 支持 SUN JCE 接口规范。
 * 支持国密算法的PKI业务应用。
 
 ### 性能
