--- a/product/视频服务/点播/开发者指南/视频加密/1视频加密综述.md
+++ b/product/视频服务/点播/开发者指南/视频加密/1视频加密综述.md
@@ -31,7 +31,7 @@
 	</tr>
 </table>
 <dx-alert infotype="notice" title="">
-因 HLS 普通加密的安全门槛较低，**已不再推荐使用**。
+**因 HLS 普通加密的安全门槛较低，已不再推荐使用**。
 </dx-alert>
 
 * [防盗链](https://cloud.tencent.com/document/product/266/11243)  主要用于控制视频播放请求来源的合法性，但防盗链不对视频内容加密，用户下载后可以二次分发，在版权保护上的安全级别不高。
