--- a/product/移动与通信/云开发低代码平台/常见问题/页面和组件相关问题.md
+++ b/product/移动与通信/云开发低代码平台/常见问题/页面和组件相关问题.md
@@ -44,55 +44,55 @@ export function usePlatform() {
 
 
 [](id:que5)
-### 提供的表单组件中的某个组件的文本内容需要如何获取？
-可以选择 change事件触发 赋值 可获取value，或参见 [触发条件](https://cloud.tencent.com/document/product/1301/65931)。
+### 提供的表单组件中某个组件的文本内容该如何获取？
+可以选择 change 事件触发 赋值 可获取 value，或参见 [触发条件](https://cloud.tencent.com/document/product/1301/65931)。
 
 
 
 [](id:que6)
-### “组件-表单文件上传 ”该组件上传的文件会存储到哪里去吗?
+### “组件-表单文件上传 ”该组件上传的文件会存储到哪里?
 文件会存在微搭的云服务器上，通过数据模型中的**数据管理后台**可以查看到这些文件或其他数据，详情请参见 [管理数据](https://cloud.tencent.com/document/product/1301/66271)。
 
 
 [](id:que7)
 ### 找不到图文列表？
- 先选择「列表视图」组件，然后右侧属性「模板」选择「图文列表」即可，还有其他模板也可以按需选用。
+ 先选择**列表视图**组件，然后右侧属性**模板**选择**图文列表**即可，还有其他模板也可以按需选用。
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/4a983ef50cba2fbcefcb130ef2458443.png" style = "width:50%">
 
 
 [](id:que8)
 ### 个人区块怎么去创建？
-选中一个模块，点击这里的保存图标，就是保存为个人区块。
+选中一个模块，单击下图红框保存为个人区块。
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/316c7124d8ede57fc711b151ed6bfc6d.png" style = "width:50%">
 
 
 [](id:que9)
-### 微搭代码 组件中绑定 "查看列表 (wedaGetList)" 如何按创建时间降序?
-用getrecords。
+### 微搭代码组件中绑定 "查看列表 (wedaGetList)" 如何按创建时间降序?
+用 getrecords。
 
 
 [](id:que10)
 ### 可以实现点击图片后隐藏图片吗？
-1创建普通变量，变量类型选择boolean，初始值为true
-2图片组件配置区-通用配置-条件展示开启，绑定步骤1中的普通变量。
-3创建自定义方法，自定义方法中令变量=false
-4图片绑定自定义方法，点击时触发。
+1. 创建普通变量，变量类型选择 boolean，初始值为 true。
+2. 选中**图片**组件，进入右侧**配置区** > **通用配置**页面，单击开启**条件展示**，绑定步骤1中的普通变量。
+3. 创建自定义方法，自定义方法中令变量=false。
+4. 选中上述**图片**组件，绑定自定义方法，点击时触发。
 
 [](id:que11)
 ### 如何对地图进行操作标记？
-表单地图组件不支持标记，需要用连接器自己封装前端组件，可以看下 [自定义组件](https://cloud.tencent.com/document/product/1301/53287)。 
+表单地图组件不支持标记，需要用连接器自己封装前端组件，详情请参见 [自定义组件](https://cloud.tencent.com/document/product/1301/53287)。 
 
 
 
 [](id:que12)
 ### 个人小程序能使用腾讯位置服务插件吗？
-目前微搭平台暂时不能使用插件，已经支持了表单地图定位组件，可以看下是否满足需求。
+目前微搭平台暂时不能使用插件，已经支持了表单地图定位组件，可以是否满足需求。
 
 
 
 [](id:que13)
-### 目前在列表组件内可以实现不同管理用户查看不同部门的数据吗？
-可以的。
+### 目前在列表组件内支持不同管理用户查看不同部门的数据吗？
+支持。
 
 
 
@@ -100,11 +100,11 @@ export function usePlatform() {
 ## 页面相关
 [](id:que14)
 ### 如何实现页面之间参数传递？
-在微搭编辑器中，可以通过配置页面参数来实现跳转传参功能，通常可用于实现对详情页面的内容控制。详情请参见 [实现页面跳转传参](https://cloud.tencent.com/document/product/1301/70204)。
+在微搭编辑器中，可通过配置页面参数来实现跳转传参功能，通常可用于实现对详情页面的内容控制。详情请参见 [实现页面跳转传参](https://cloud.tencent.com/document/product/1301/70204)。
 
 
 [](id:qu15)
-### 如何在应用/页面中展示数据源中的数据？for 循环和 if 循环如何实现？
+### 如何在应用或页面中展示数据源中的数据？for 循环和 if 循环如何实现？
 详情请参见 [循环展示与条件展示](https://cloud.tencent.com/document/product/1301/58434)。 
 
 
@@ -131,7 +131,7 @@ export function usePlatform() {
 
 [](id:que20)
 ### 如何从 event 获取表单的值呢？
-在表单输入组件中，行为配置，**change 输入改变**事件，通过 event.detail.value 可以获取组件值。
+在表单输入组件中，行为配置，**change 输入改变**事件，通过 event.detail.value 可获取组件值。
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/56c9ae5dfc95bd1296701575154da4b2.png" style = "width:50%">
 然后再赋值到变量上。
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/9705f2b20df6cf56ebcc538113645133.png" style = "width:50%">
@@ -139,7 +139,7 @@ export function usePlatform() {
 
 
 [](id:que21)
-### 表单选择/多选等如何实现动态下拉列表？
+### 表单选择或多选等如何实现动态下拉列表？
 1. 新建一个数据源，叫做选项，增加 label 和 value 字段。
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/0c13d11a5309cb62d09c5ff4733bf45b.png" style = "width:50%">
 2. 单击操作栏下**更多** > **发布**之后，进入数据管理后台。
@@ -163,7 +163,6 @@ export function usePlatform() {
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/c6589992318fd39255c3c26086c2b5c5.png" style = "width:50%"> 
 3. 通过左上角菜单进入**低码编辑器**，选择区块生成的自定义方法 `listLoadMore`。
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/a214aa8ac14be8c8e8b9117f14c8b811.png" style = "width:50%"> 
-
 4. 按照如下注释对代码逻辑进行修改即可。
 <dx-codeblock>
 :::  js
@@ -206,7 +205,7 @@ export default async function({event}) {
 
 [](id:que23)
 ### 文字版块布局统一大小问题？
-需要固定最上面文字组件的 width 。
+需要固定最上面文字组件的 width。
 
 
 [](id:que24)
@@ -235,8 +234,8 @@ export default async function({event}) {
 打开低码编辑器，每个页面都有一个 lifecycle 的那个文件。在那个文件里面调用获取 openid 的云函数。只支持 openid，用户信息不可以，用户信息必须是触发获取。
 
 [](id:que29)
-### 如何链接，点击后的内容。点击卡片后跳转到详情页面？
-可以参考下这个教程，有3个步骤，第3步是讲页面跳转逻辑的，建议从头看，可以了解清楚整个场景的搭建方法 [案例](https://cloud.tencent.com/document/product/1301/68187)。
+### 如何链接点击后的内容？点击卡片后跳转到详情页面？
+详情可参见 [实现内容列表到内容详情页的页面跳转逻辑](https://cloud.tencent.com/document/product/1301/71824#.E5.AE.9E.E7.8E.B0.E5.86.85.E5.AE.B9.E5.88.97.E8.A1.A8.E5.88.B0.E5.86.85.E5.AE.B9.E8.AF.A6.E6.83.85.E9.A1.B5.E7.9A.84.E9.A1.B5.E9.9D.A2.E8.B7.B3.E8.BD.AC.E9.80.BB.E8.BE.91)。
 
 [](id:que30)
 ### 如何设置控件表单输入的宽度？
@@ -245,8 +244,8 @@ export default async function({event}) {
 
 
 [](id:que31)
-### 选了地理位置之后将文本信息存回数据库，这个支持不？
-可以通过表单提交的方式，将选择的点位存到数据源。
+### 如何实现将用户所选的地理位置信息存储到数据库？
+可以通过表单提交的方式，将选择的点位储存到数据源。
 
 [](id:que32)
 ### 放一张二维码的图片怎么实现长按扫码功能呢？
@@ -272,49 +271,49 @@ export default async function({event}) {
 
 
 [](id:que37)
-### 地埋位置字段是不是只能用于小程序，不可以用于WEB和H5？
+### 地埋位置字段是不是只能用于小程序，不可以用于 Web 和 H5？
 是支持小程序、H5 和 PC 端定位。
 
 
 
 [](id:que38)
-### 用模板新建的应用，为什么搜索不到【数据容器】呢？
+### 用模板新建的应用，为什么搜索不到“数据容器”？
 数据容器是个分类。
 
 
 [](id:que39)
-### “引入百度统计”这样需要在index.html  的head 引入脚本 怎么引入呢，可以修改index吗？
-可以。需要在lifecycle里写js来动态修改，append一段统计的js。
+### 需要在 index.html 的 head 引入“引入百度统计”脚本，怎么引入，可以修改 index 吗？
+可以。需要在 lifecycle 里写 js 进行动态修改，append 一段统计的 js。
 
 
 [](id:que40)
 ### 微搭现在支持链接蓝牙打印机吗？
-需要调用小程序蓝牙能力： [蓝牙微信开放文档](https://developers.weixin.qq.com/miniprogram/dev/framework/device/beacon.html)。 
+需要调用小程序蓝牙能力，详情请参见 [蓝牙微信开放文档](https://developers.weixin.qq.com/miniprogram/dev/framework/device/beacon.html)。 
 
 
 [](id:que41)
 ### 时间展示在前端，如何转换为日期格式展示？
-在表达式里面写app.utils.formatDate(new Date(forItems.idxx.xxy), 'yyyy-mm-dd')
+在表达式里面写 app.utils.formatDate(new Date(forItems.idxx.xxy), 'yyyy-mm-dd')。
 
 
 [](id:que42)
 ### 在数据模型创建了一个表单，想做一个可以查询这个表单的页面，怎么也操作呢？
-页面中实现搜索功能，可以看下这个文档 [搜索功能](https://mp.weixin.qq.com/s/7s3UcnWXw3rllVUR2HUvRg)。 
+页面中实现搜索功能，详情请参见 [搜索功能](https://mp.weixin.qq.com/s/7s3UcnWXw3rllVUR2HUvRg)。 
 
 
 
 [](id:que43)
-### 微搭如何获得图片/文件的URL链接？
+### 微搭如何获得图片或文件的 URL 链接？
 微搭为了保证您的资源安全，设置了防盗链逻辑，用户不可获得永久地址。
-· 在数据管理后台可以实现图片、文件的下载和管理。
-· 在应用内展示图片可以使用“图片”组件
-· 需要获得URL的场景可以参考这个文档实现 [参考文档](https://docs.cloudbase.net/lowcode/datasource/usage#appcloudgettempfileurl)。 
+- 在数据管理后台可以实现图片、文件的下载和管理。
+- 在应用内展示图片可以使用“图片”组件
+- 需要获得 URL 的场景可参见 [在应用中使用数据源](https://docs.cloudbase.net/lowcode/datasource/usage#appcloudgettempfileurl)。 
 
 
 
 [](id:que44)
-### 使用的模板页面，删除了协议内容后，无法提交是什么原因？页面也没有提示报错
-模板自定义方法中限制了必须同意协议按钮才能进行下一步提交，删除之后confirm这个字段拿不到，所以提交失败。
+### 使用的模板页面，删除了协议内容后，无法提交是什么原因？且页面也没有提示报错？
+模板自定义方法中限制了必须同意协议按钮才能进行下一步提交，删除后 confirm 这个字段拿不到，所以提交失败。
 
 
 
@@ -328,7 +327,7 @@ export default async function({event}) {
 
 [](id:que46)
 ### 怎么解除循环展示？
-右侧  高级属性 循环  解除绑定
+选中对应组件，进入右侧属性面板**高级属性**页面，单击**循环展示**右侧，解除绑定。
 ![](https://qcloudimg.tencent-cloud.cn/raw/7a61902f141c24d6d9bbda56b8470ab2.png)
 
 
@@ -340,7 +339,7 @@ export default async function({event}) {
 
 
 [](id:que48)
-### 请问微搭数据源模糊查询怎么写？数据源模糊查询多条该怎么写？
+### 微搭数据源模糊查询怎么写？如何实现多条模糊查询？
 可通过低码编辑器进行数据源的绑定。更多查询操作请参见 [查询指令](https://docs.cloudbase.net/api-reference/server/node-sdk/database/database#%E6%9F%A5%E8%AF%A2%E6%8C%87%E4%BB%A4)。
 
 [](id:que49)
@@ -355,17 +354,17 @@ export default async function({event}) {
 
 [](id:que51)
 ### 使用表单容器中自带的绑定数据源新增记录，如何得到新增数据后返回的 \_id 值？
-看 create 方法有没返回值，有的话， 数据源的 success 里， 通过 event.detail  拿返回值。
+看 create 方法有没返回值，有的话， 数据源的 success 里， 通过 event.detail  获取返回值。
 
 
 
 [](id:que52)
-### 提示发生异常，记得保存数据。
+### 提示发生异常该怎么处理？
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/90691f7a0edb5091f224e629eec92101.png" style = "width:50%"> 
-某个分支兼容可能出了问题， 可以选中一下组件 ， 然后刷新，就可以了。
+某个分支兼容可能出了问题，先保存数据，然后选中一个组件刷新。
 
 
 [](id:que53)
 ### 系统服务器只支持 HTTP 方法获取数据，需要以 text 格式发送 post 内容，如何能实现从服务器获取数据？
-您可以使用自定义连接器 - 自定义代码的方式实现。详情请参见 [自定义代码（云函数）](https://cloud.tencent.com/document/product/1301/68440)。
+您可以使用**自定义连接器** > **自定义代码**的方式实现。详情请参见 [自定义代码（云函数）](https://cloud.tencent.com/document/product/1301/68440)。
 
