--- a/product/大数据与AI/人脸识别/离线识别SDK/常见问题.md
+++ b/product/大数据与AI/人脸识别/离线识别SDK/常见问题.md
@@ -72,7 +72,7 @@ sdk 底层算法需要的图片格式是 RGB888，可先确认图片格式或者
 最大规模支持3W的储存量，推荐1万储存，可实现毫秒级结果返回：在 RK3399 上测试1:10000平均响应时间是100+ms，若人脸库远大于3W，推荐采用端+云的方案，即采用本地人脸检测、活体检测等筛选采集操作，再请求云端进行人脸库搜索匹配。
 
 ### 人脸检测的 traceId 指的是什么?
-指的是同一次流程。 
+指的是同一次检测流程。 
 1. 如果同一个人，一直没离开镜头，那么 traceId 不变。
 2. 如果同一个人，离开镜头再回来，那么 traceId 会变化。
 （traceId 由人脸的移动轨迹计算得到，不是人脸的相似度。）
