--- a/product/大数据与AI/数据湖计算/操作指南/数据查询任务/查询脚本参数.md
+++ b/product/大数据与AI/数据湖计算/操作指南/数据查询任务/查询脚本参数.md
@@ -1,4 +1,4 @@
-﻿为方便用户使用脚本参数进行查询，数据湖计算DLC支持配置日期参数进行查询。
+为方便用户使用脚本参数进行查询，数据湖计算DLC支持配置日期参数进行查询。
 数据湖计算 DLC 标准日期格式为：yyyymmddhh24miss，通过${}命令将日期设为变量，变量分为日期、时间两个部分，结果为两部分之和。
 - 日期部分，可以是任意日期格式或者系统预定义变量，如 yyyymmdd、yyyymm、yyyy-mm-dd、yy、dataDate。
 - 日期变化部分，可以+/-N个周期，支持N/Nd、Nm、Nw、Nh、Nmi。兼容支持计算公式，如7*N、N/24。
