--- a/product/安全服务/容器安全服务/操作指南/集群安全/接入自建集群.md
+++ b/product/安全服务/容器安全服务/操作指南/集群安全/接入自建集群.md
@@ -2,7 +2,7 @@
 本文介绍接入自建集群的步骤，您可以将自建集群接入容器安全服务进行统一管理，对自建集群开展集群风险检查和管理。
 
 ### 限制条件
-接入自建集群节点规模小于500。
+接入自建集群节点规模小于500节点。
 
 
 ### 操作步骤
@@ -72,7 +72,7 @@
 </tbody></table>
 4. 在上传配置文件，单击**选择文件**，上传本地文件后，单击**完成接入**即可接入自建集群。
 >!
->- 公网方式接入自建集群，如果您的集群有**设置访问控制策略**，需单击 **IP白名单地址**添加页面中的 IP 地址。
+>- 公网方式接入自建集群，如果您的集群有**设置访问控制策略**，需单击 **IP 白名单地址**添加页面中的 IP 地址。
 >- 您需要在服务器上生成 K8s 配置文件后，才能上传该配置文件。生成 K8s 配置文件的具体操作，请参见 [生成 K8S 配置文件](#K8s)。
 >- 上传配置文件，大小需要在1M 以内。
 >
@@ -82,7 +82,7 @@
 本文指导您生成容器安全需要的最小化权限 K8s 配置文件。您可参照文档步骤生成配置文件，或者参见 [一键脚本](#yjjb)。
 
 ### 前提条件
-•	已在服务器上搭建K8s集群。具体操作，请参见 [K8s 中文官方文档](https://kubernetes.io/zh/docs/setup/)。
+•	已在服务器上搭建 K8s 集群。具体操作，请参见 [K8s 中文官方文档](https://kubernetes.io/zh/docs/setup/)。
 •	已安装 Docker 服务。
 
 ### 操作步骤
