--- a/product/区块链/TBaaS/开发指南/应用系统对接/对接说明.md
+++ b/product/区块链/TBaaS/开发指南/应用系统对接/对接说明.md
@@ -33,7 +33,7 @@
 <li>tbaas-fabric-sdk-java 在原生社区 SDK 上进行了封装，简化配置流程的同时，保留了丰富的功能支持。</li>
 <li>chainmaker-sdk-go-demo 详细地介绍如何使用SDK对接长安链网络，并提供完整的 Demo，帮助用户快速了解 SDK 对接的方式。</li>
 </td>
-<td><ul class="params"><li>用户侧应用系统对区块链的调用频率超过50笔每秒（TPS）。</li><li>用户侧应用系统已经基于区块链原生的 SDK 进行了相关开发，迁移至云上时，希望改动尽可能少。</li><li>若需内网服务（需购买腾讯云服务器），用户侧服务器所在 VPC 与区块链网络在同一地域。例如，用户侧服务器 VPC 在广州，区块链网络也需要在购买在广州，目前 TBaaS 仅支持同地域打通。</li><li>目前长安链·ChainMaker 仅支持外网服务、Fabric 支持内网、外网服务。</li></ul></td>
+<td><ul class="params"><li>用户侧应用系统对区块链的调用频率超过50笔每秒（TPS）。</li><li>用户侧应用系统已经基于区块链原生的 SDK 进行了相关开发，迁移至云上时，希望改动尽可能少。</li><li>若需内网服务（需购买腾讯云服务器），用户侧服务器所在 VPC 与区块链网络在同一地域。例如，用户侧服务器 VPC 在广州，区块链网络也需要在购买在广州，目前 TBaaS 仅支持同地域打通。</li><li>目前长安链·ChainMaker 仅支持外网服务，Fabric 支持内网、外网服务。</li></ul></td>
 </tr>
 </tbody></table>
 <style>
