--- a/product/移动与通信/云开发低代码平台/常见问题/计费相关问题.md
+++ b/product/移动与通信/云开发低代码平台/常见问题/计费相关问题.md
@@ -28,11 +28,11 @@
 
 [](id:que6)
 ### 微搭专业版是不是支持私有化部署？
-可以看下这个文档 [参考文档](https://cloud.tencent.com/document/product/1301/70190)。
+详情请参见 [私有化部署](https://cloud.tencent.com/document/product/1301/70190)。
 
 [](id:que7)
 ### 资源包是指开发的时候，需要支付，如果项目发布到云上，还需要每个月都支付这个资源包么？
-需要的。
+需要。
 
 ## 服务商相关
 [](id:que8)
@@ -42,4 +42,4 @@
 
 [](id:que9)
 ### 服务商怎么收费？
- 服务商模式本身不收费，服务商为客户购买的环境包收费模式可以参见 [服务商计费](https://cloud.tencent.com/document/product/1301/57324)。
+ 服务商模式本身不收费，服务商为客户购买的环境包收费模式请参见 [服务商计费](https://cloud.tencent.com/document/product/1301/57324)。
