--- a/product/移动与通信/云开发低代码平台/常见问题/小程序相关问题.md
+++ b/product/移动与通信/云开发低代码平台/常见问题/小程序相关问题.md
@@ -101,19 +101,19 @@ wx 方法只能在小程序内使用，云函数不可以使用。
 
 
 [](id:que21)
-### 微搭创建的H5页面，用web-view嵌入到微信小程序中，H5-小程序之间是否可以传参？
- 1. 用webview引入h5页面，需要配置业务域名，并在h5服务器那边加入校验文件
+### 微搭创建的 H5 页面，用web-view嵌入到微信小程序中，H5 和小程序之间是否可以传参？
+ 1. 用 webview 引入 H5 页面，需要配置业务域名，并在 H5 服务器那边加入校验文件
  2. 进到 [静态托管](https://console.cloud.tencent.com/tcb/hosting/index)，找到对应域名的根目录，上传校验文件。
 
 
 [](id:que22)
-### 微搭的h5做微信授权登录时，跳转不了吗？
+### 微搭的 H5 做微信授权登录时，跳转不了吗？
 目前只支持小程序。
 
 
 [](id:que23)
 ### 外部小程序授权微搭后，内容会被覆盖吗？
-不会覆盖的。
+不会覆盖。
 
 
 [](id:que24)
@@ -127,7 +127,7 @@ wx 方法只能在小程序内使用，云函数不可以使用。
 ## 审核相关
 [](id:que25)
 ### 一般小程序应用审核需要多久？
-一般小程序应用审核需要1 - 7个工作日。
+一般小程序应用审核需要1个 - 7个工作日。
 
 [](id:que26)
 ### 小程序提交审核后，审核失败，如何处理？
