--- a/product/移动与通信/云开发低代码平台/常见问题/微搭平台相关问题.md
+++ b/product/移动与通信/云开发低代码平台/常见问题/微搭平台相关问题.md
@@ -6,8 +6,8 @@
 
 
 [](id:que2)
-### 请问哪里可以下载最新chrome浏览器？
-可以在这里 [浏览器下载](https://www.google.cn/chrome/)。
+### 请问哪里可以下载最新 chrome 浏览器？
+可以单击这里进行 [下载](https://www.google.cn/chrome/)。
 
 
 
@@ -37,7 +37,7 @@
 [](id:que7)
 ### 腾讯云微搭低代码可以开发哪些应用？
 目前腾讯云微搭低代码支持小程序、H5、PC 端和 Web 应用的搭建。
-用企业微信关联WEDA，在工作台发布的应用，能发布到外部公共访问或微信用户登录访问么？
+用企业微信关联 WEDA，在工作台发布的应用，能发布到外部公共访问或微信用户登录访问么？
 企业工作台的链接可以外网公共访问，需要用账户名密码登录访问，暂不支持微信登录。
 
 [](id:que8)
@@ -71,7 +71,7 @@
 
 [](id:que12)
 ### 如何配置自定义域名？
-微搭支持配置自定义域名，具体设置可参考文档[自定义域名](https://cloud.tencent.com/document/product/1301/70110)。
+微搭支持配置自定义域名，具体设置请参见 [自定义域名](https://cloud.tencent.com/document/product/1301/70110)。
 
 
 
@@ -118,13 +118,13 @@
 微搭目前没有接入微信客服的接口。
 
 [](id:que20)
-### 用微搭写了前半部分，后面想转移，如何把json放到开发者工具里？
-可以导出json，或者在微搭编辑器里调起IDE。
+### 用微搭写了前半部分，后面想转移，如何把 json 放到开发者工具里？
+可以导出 json，或者在微搭编辑器里调起 IDE。
 
 
 
 [](id:que21)
-### 微搭的自定义方法可以写ajax吗？
+### 微搭的自定义方法可以写 ajax 吗？
 可以。
 
 
@@ -134,13 +134,13 @@
 个人用户开不了插件。
 
 [](id:que23)
-### 微搭可以http访问腾讯云服务器的web程序吗？
+### 微搭可以 HTTP 访问腾讯云服务器的 Web 程序吗？
 可以。
 
 
 [](id:que24)
-### 第三方应用可以更新微搭的数据表吗，主动更新？
-可以的，可以看下[参考文档](https://cloud.tencent.com/document/product/1301/70924)。
+### 第三方应用支持主动更新微搭的数据表吗？
+支持。详情请参见 [开放功能](https://cloud.tencent.com/document/product/1301/70924#.E5.BC.80.E6.94.BE.E5.8A.9F.E8.83.BD)。
 
 
 
