--- a/product/数据库/云数据库PostgreSQL/购买指南/产品价格.md
+++ b/product/数据库/云数据库PostgreSQL/购买指南/产品价格.md
@@ -128,8 +128,8 @@
 | 阶梯 | 时间范围 |
 |---------|---------|
 | 第一阶梯 | ≤ 4天 |
-| 第一阶梯 | ＞4天，≤15天 |
-| 第一阶梯 | ＞15天 |
+| 第二阶梯 | ＞4天，≤15天 |
+| 第三阶梯 | ＞15天 |
 
 **示例**：用户的一个实例为按量计费模式，使用了30天，则前4天即96小时按第一阶梯价格计费，4天以上到15天即264小时按第二阶梯价格计费，15天以上到30天即360小时按第三阶梯价格计费。
 
