--- a/product/大数据与AI/数据湖计算/操作指南/数据引擎管理.md
+++ b/product/大数据与AI/数据湖计算/操作指南/数据引擎管理.md
@@ -6,7 +6,7 @@ DLC 的数据引擎是 DLC 的数据分析计算服务的基础，用户在 DLC 
 DLC 为 Serverless 架构，在一段时间内首次执行任务需要调度数据引擎，等待时间可能稍长。
 
 ### 独享引擎
-独享引擎是用户付费购买的专属于自己的数据引擎，资源使用按量计费，具体资费参见具体资费参见[ 计费概述](https://cloud.tencent.com/document/product/1342/50371)。
+独享引擎是用户付费购买的专属于自己的数据引擎，资源支持按量计费、包年包月两种付费模式，具体资费参见[ 计费概述](https://cloud.tencent.com/document/product/1342/50371)。
 **按量计费**：适合分析数据具有周期性，需根据业务峰谷进行弹性伸缩的用户，具有高灵活、高稳定对的特点，按 CU 使用量付费。
 **包年包月**：适合长期大量稳定的数据分析需求，可根据业务峰谷进行弹性伸缩，无需等待资源拉起，随时可用，按集群规格按月付费，弹性扩容集群按 CU 使用量计费。
 
