--- a/product/计算与网络/容器服务/动态与公告/产品公告/伸缩组功能下线公告.md
+++ b/product/计算与网络/容器服务/动态与公告/产品公告/伸缩组功能下线公告.md
@@ -1,13 +1,26 @@
-## 伸缩组功能下线公告
+ 
 
-为了给您带来一致性的用户体验，腾讯云容器服务计划于 2022 年 5 月 25 日 正式下线伸缩组服务，如果您的集群中已创建伸缩组，您可以使用 TKE 提供的 [从伸缩组创建节点池 API](https://cloud.tencent.com/document/product/457/49435) 或通过容器服务控制台将伸缩组转换成节点池（操作如下图）。
+为了给您带来一致性的用户体验，腾讯云容器服务计划于2022年5月25日正式下线伸缩组服务，如果您的集群中已创建伸缩组，您可以使用 TKE 提供的**从伸缩组创建节点池 API** 或**通过容器服务控制台**将伸缩组转换成节点池。
 
-![](https://qcloudimg.tencent-cloud.cn/raw/ec24e965de7d64225babc5843d15511c.png)
+<dx-tabs>
+::: 通过 API
+您可以使用 CreateClusterNodePoolFromExistingAsg 接口将伸缩组转换成节点池。详细信息请参见 [从伸缩组创建节点池](https://cloud.tencent.com/document/product/457/49435)。
+:::
+::: 通过控制台
+1. 登录 [容器服务控制台 ](https://console.cloud.tencent.com/tke2)，单击左侧导航栏中**集群**。
+2. 在“集群管理”列表页面，选择目标集群 ID。
+3. 在集群详情页， 选择**节点管理 > 伸缩组**。
+4. 在节点池列表页，选择伸缩组右侧的**更多 > 创建节点池**.
+![](https://qcloudimg.tencent-cloud.cn/raw/ff213f5a00dae59454fd7d7e8fae6c34.png)
+:::
+</dx-tabs>
+
+ 
 
 节点池在伸缩组的基础上提供了更稳定、全面的弹性伸缩能力，方便您更快捷地创建、管理和销毁节点，届时您可通过节点池继续管理已经创建的伸缩组，详情请参考 [节点池概述](https://cloud.tencent.com/document/product/457/43719)。
 
 >? 将伸缩组转换为节点池的过程中将不会影响您业务的正常运行。
 
 ### 下线计划
-- 创建入口关闭：伸缩组服务将于 5 月 10 日正式关闭控制台和 API 创建入口。届时您将无法通过上述两个渠道来创建新的伸缩组。
-- 功能下线和切换：伸缩组服务计划于 5 月 25 日正式下线。建议您在 5 月 25 日之前参考上述操作将伸缩组转换成节点池，针对 25 日之后仍然存在的伸缩组，平台将替您转换为节点池统一管理。
+- 创建入口关闭：伸缩组服务将于2022年5月10日正式关闭控制台和 API 创建入口。届时您将无法通过控制台和 API 创建新的伸缩组。
+- 功能下线和切换：伸缩组服务计划于2022年5月25日正式下线。建议您在2022年5月25日之前参考“将伸缩组转换成节点池”的操作将伸缩组转换成节点池，针对2022年5月25日之后仍然存在的伸缩组，平台自动将其转换为节点池统一管理。
