--- a/product/移动与通信/云开发低代码平台/常见问题/页面和组件相关问题.md
+++ b/product/移动与通信/云开发低代码平台/常见问题/页面和组件相关问题.md
@@ -66,9 +66,7 @@ export function usePlatform() {
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/316c7124d8ede57fc711b151ed6bfc6d.png" style = "width:50%">
 
 
-[](id:que9)
-### 微搭代码组件中绑定 "查看列表 (wedaGetList)" 如何按创建时间降序?
-用 getrecords。
+
 
 
 [](id:que10)
@@ -277,9 +275,9 @@ export default async function({event}) {
 
 
 [](id:que38)
-### 用模板新建的应用，为什么搜索不到“数据容器”？
-数据容器是个分类。
-
+### 用模板新建的应用后，为什么在应用编辑器搜索不到“数据容器”组件？
+**数据容器**不是一个组件，是一个组件的分类。
+<img src = "https://qcloudimg.tencent-cloud.cn/raw/38a26c713588381d2e639b3d7c9e19a1.png" style = "width:50%">
 
 [](id:que39)
 ### 需要在 index.html 的 head 引入“引入百度统计”脚本，怎么引入，可以修改 index 吗？
@@ -361,8 +359,8 @@ export default async function({event}) {
 [](id:que52)
 ### 提示发生异常该怎么处理？
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/90691f7a0edb5091f224e629eec92101.png" style = "width:50%"> 
-某个分支兼容可能出了问题，先保存数据，然后选中一个组件刷新。
-
+某个分支兼容出了问题，可以选中其中任意一下组件，然后单击**刷新**，就可以恢复。
+<img src = "https://qcloudimg.tencent-cloud.cn/raw/137decd98acb43dd0b97d68bc02de0b8.png" style = "width:50%"> 
 
 [](id:que53)
 ### 系统服务器只支持 HTTP 方法获取数据，需要以 text 格式发送 post 内容，如何能实现从服务器获取数据？
