--- a/product/监控与管理/访问控制/用户指南/策略管理/语法逻辑/生效条件/条件键和条件运算符.md
+++ b/product/监控与管理/访问控制/用户指南/策略管理/语法逻辑/生效条件/条件键和条件运算符.md
@@ -1,4 +1,3 @@
-﻿
 ## 条件键
 
 腾讯云通用条件键命名格式：`qcs:<condition-key>`，当前只支持5种条件键，条件键的内容及描述如下：
@@ -129,9 +128,8 @@
 </tr>
 </tbody></table>
 
-
-在生效语句中，可以使用的条件运算符取决于选择的条件键，条件运算符与条件键的映射关系如下：
-
+## 映射关系
+在生效语句中，可以使用的条件运算符取决于选择的条件键，条件键与条件运算符的映射关系如下：
 
 <table>
 <thead>
@@ -146,23 +144,18 @@
 </tr>
 <tr>
 <td>string_not_equal</td>
-<td></td>
 </tr>
 <tr>
 <td>string_equal_ignore_case</td>
-<td></td>
 </tr>
 <tr>
 <td>string_not_equal_ignore_case</td>
-<td></td>
 </tr>
 <tr>
 <td>string_like</td>
-<td></td>
 </tr>
 <tr>
 <td>string_not_like</td>
-<td></td>
 </tr>
 <tr>
 <td rowspan="6">qcs:current_time</td>
@@ -170,23 +163,18 @@
 </tr>
 <tr>
 <td>date_not_equal</td>
-<td></td>
 </tr>
 <tr>
 <td>date_less_than</td>
-<td></td>
 </tr>
 <tr>
 <td>date_less_than_equal</td>
-<td></td>
 </tr>
 <tr>
 <td>date_greater_than</td>
-<td></td>
 </tr>
 <tr>
 <td>date_greater_than_equal</td>
-<td></td>
 </tr>
 <tr>
 <td rowspan="2">qcs:ip</td>
@@ -194,6 +182,5 @@
 </tr>
 <tr>
 <td>ip_not_equal</td>
-<td></td>
 </tr>
 </tbody></table>
