--- a/product/安全服务/容器安全服务/操作指南/集群安全/接入自建集群.md
+++ b/product/安全服务/容器安全服务/操作指南/集群安全/接入自建集群.md
@@ -192,7 +192,7 @@ openssl x509 -req -in tcss.csr -CA ca.crt -CAkey ca.key -CAcreateserial -out tcs
 ```
 4. 输入如下命令，创建集群配置文件。
 ```
-# 创建并设置集群配置, 其中需要主要 server 地址必须为公网可访问地址
+# 创建并设置集群配置, 其中需要 API Server 地址必须为公网可访问地址
 kubectl config set-cluster tcss --server=https://xx.xx.xx.xx:60002 --certificate-authority=/etc/kubernetes/ca.crt --embed-certs=true --kubeconfig=/root/tcss.conf
 
 # 创建并设置用户配置
@@ -208,7 +208,7 @@ kubectl config use-context tcss@tcss --kubeconfig=/root/tcss.conf
 ```
 KUBECONFIG=/root/tcss.conf kubectl -n tcss get pod
 ```
->?执行上述命令，如果能显示 pod 或者显示当前命名空间下没有相关资源则表示该集群配置是可用的，上传该文件 /root/tcss.conf 即可。
+>?执行上述命令，如果能显示 pod 或者显示当前命名空间下没有相关资源，则表示该集群配置是可用的，上传该文件 /root/tcss.conf 即可。
 
 ### 一健脚本[](id:yjjb)
 在 mater 节点中，您可基于以下一键脚本代码一键快速生成集群配置文件：
