--- a/product/计算与网络/专线接入/公告/专线共享通道计费方式变更通知.md
+++ b/product/计算与网络/专线接入/公告/专线共享通道计费方式变更通知.md
@@ -1,8 +1,9 @@
 尊敬的客户，您好！
 
-专线接入的共享通道计费模式将于2022年06月01日 00:00进行调整，具体调整如下：
-1. 共享通道开始收取共享通道占用费。
+为给您提供标准化的专线共享能力，专线接入共享通道正式商业化。同时专线接入的共享通道计费模式将于2022年06月01日 00:00进行调整，具体调整如下：
+1. 共享通道开始向收取共享通道占用费。
 2. 计费模式：按月后付费，每月产生的费用将在次月1日上午的8 - 10点之间进行扣费。其他费用保持现网逻辑（物理端口占用费和出流量费用保持现网逻辑）。
+3. 收费对象：资源使用方按照实际用量付费。
 共享通道占用费刊例价：
 <table>
 <tr>
@@ -76,8 +77,8 @@
 <td>80000</td>
 </tr>
 </table>
-3. 功能变更
-共享通道创建页增加“共享通道规格”选项，系统将会依据您当前的通道带宽向上转为最近的共享通道规格。
-例如，您当前的共享通道带宽值为10Mbps，2022年06月01日 00:00后将会匹配50Mbps的共享通道规格。
->?如果您有带宽变更需求请在2022年06月01日完成调整。
+4. 功能变更
+共享通道创建页增加“共享通道规格”选项，根据实际带宽匹配通道规格。
+您共享通道带宽值设定为10Mbps，2022年06月01日 00:00后将会匹配50Mbps的共享通道规格。
+>?存量通道的费用付费方式请咨询商务经理。
 >
