--- a/product/监控与管理/访问控制/用户指南/策略管理/语法逻辑/生效条件/条件键和条件运算符.md
+++ b/product/监控与管理/访问控制/用户指南/策略管理/语法逻辑/生效条件/条件键和条件运算符.md
@@ -1,3 +1,7 @@
+在通过 CAM 控制台的 [策略生成器创建策略](https://cloud.tencent.com/document/product/598/37739#.E6.8C.89.E7.AD.96.E7.95.A5.E7.94.9F.E6.88.90.E5.99.A8.E5.88.9B.E5.BB.BA) 时，我们可以根据需要设置策略生效条件。
+![](https://qcloudimg.tencent-cloud.cn/raw/c210fbd7ca322fbd3fed2f13a34b5dc7.png)
+
+
 ## 条件键
 
 腾讯云通用条件键命名格式：`qcs:<condition-key>`，当前只支持5种条件键，条件键的内容及描述如下：
