--- a/product/监控与管理/访问控制/用户指南/策略管理/语法逻辑/生效条件/条件键和条件运算符.md
+++ b/product/监控与管理/访问控制/用户指南/策略管理/语法逻辑/生效条件/条件键和条件运算符.md
@@ -2,9 +2,9 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/c210fbd7ca322fbd3fed2f13a34b5dc7.png)
 
 
-## 条件键
+## 键(key)
 
-腾讯云通用条件键命名格式：`qcs:<condition-key>`，当前只支持5种条件键，条件键的内容及描述如下：
+腾讯云通用条件键(key) 命名格式：`qcs:<condition-key>`，当前只支持5种条件键，条件键的内容及描述如下：
 
 
 | 通用条件键       | 类型          | 描述                                                         |
@@ -23,9 +23,9 @@
 
 
 
-## 条件运算符
+## 条件(Condition)
 
-在生效条件 Condition中使用条件运算符来将策略中的条件键和值与请求上下文中的值进行匹配。
+在生效条件(Condition) 中使用条件运算符来将策略中的条件键和值与请求上下文中的值进行匹配。
 
 按照类型将条件运算符分为7类：字符串类型（String）、数字类型（Number）、日期类型（Date and time）、布尔类型（Boolean）和 IP 地址类型（IP address）、二进制条件运算符（Binary）、空条件键运算符（Null）。
 
@@ -138,8 +138,8 @@
 <table>
 <thead>
 <tr>
-<th>条件键</th>
-<th>条件运算符</th>
+<th>键(key)</th>
+<th>条件(Condition)</th>
 </tr>
 </thead>
 <tbody><tr>
