--- a/product/监控与管理/访问控制/用户指南/策略管理/语法逻辑/生效条件/条件键和条件运算符.md
+++ b/product/监控与管理/访问控制/用户指南/策略管理/语法逻辑/生效条件/条件键和条件运算符.md
@@ -133,7 +133,7 @@
 </tbody></table>
 
 ## 映射关系
-在生效语句中，可以使用的条件运算符取决于选择的条件键，条件键与条件运算符的映射关系如下：
+在生效语句中，可以使用的条件(Condition)取决于选择的键(Key)，键(Key)与条件(Condition)的映射关系如下：
 
 <table>
 <thead>
