--- a/product/视频服务/直播/最佳实践/视频直播播放安全.md
+++ b/product/视频服务/直播/最佳实践/视频直播播放安全.md
@@ -11,10 +11,10 @@
 </thead>
 <tbody><tr>
 <td>直播防盗播</td>
-<td>直播播放链接是一个 URL ，没有防盗链的的播放 URL ，任何人拿到都可以播放。并且播放 URL 往往具有一定的规律，譬如以<code>协议:\\播放域名\AppName\流ID</code>方式拼接，如果没有防盗链，任何人猜测到规则后，可以按照规则自己拼凑，遍历播放，观看所有的流。一是内容无法保密，二是盗播造成的流量还需要自己买单。</td>
+<td>直播播放链接是一个 URL ，没有防盗链的的播放 URL ，任何人拿到都可以播放。并且播放 URL 往往具有一定的规律，譬如以 <code>协议:\\播放域名\AppName\流ID</code> 方式拼接，如果没有防盗链，任何人猜测到规则后，可以按照规则自己拼凑，遍历播放，观看所有的流。一是内容无法保密，二是盗播造成的流量还需要自己买单。</td>
 </tr><tr>
 <td>筛选观众</td>
-<td>直播内容不允许让观众随意观看，希望满足某些条件的人群才能观看，譬如会员，已经登陆过的用户，完成购买的用户等等。</td></tr>
+<td>直播内容不允许让观众随意观看，希望满足某些条件的人群才能观看，譬如会员，已经登录过的用户，完成购买的用户等等。</td></tr>
 <tr>
 <td>内容版权限制</td>
 <td>直播内容的版权方有明确的限制，必须在可信的安全环境下播放。譬如迪斯尼电影，中国的电视台直播等。</td>
@@ -52,7 +52,7 @@
 ### 播放防盗链结合远程鉴权
 为了防止观众通过不合理渠道获取到播放 URL 从而引发盗播，在播放防盗链的基础上，添加了一层客户自定义 token 验证方式，提供高安全性的防盗链机制。
 
-- **使用场景**：直播播放需要精确控制允许播放的人群，譬如会员，已经登陆的观众等。
+- **使用场景**：直播播放需要精确控制允许播放的人群，譬如会员，已经登录的观众等。
 - **实施方案**：在腾讯云完成播放防盗链验证通过后，调用客户的业务服务端接口，将播放请求转发至用户的业务服务，业务端提取 token 信息进行验证，验证通过后将验证结果返回腾讯云直播，来决定是否允许播放。增加一层客户自己的验证，客户能自己控制是否允许播放。具体方案如下：
 ![img](https://wdoc-76491.picgzc.qpic.cn/MTY4ODg1MTQxODI3MjY3Mg_130769_373lkL0PBNXaYESM_1648801717?w=1202&h=536)        
 	1. 向客户业务服务（token 服务）申请播放链接。
