--- a/product/安全服务/安全营销运营平台/操作指南.md
+++ b/product/安全服务/安全营销运营平台/操作指南.md
@@ -1,5 +1,4 @@
-
-腾讯安全营销运营平台提供搭建企业自有积分商城、会员等级体系、兑换商品库、运营活动系统等服务，您可以通过控制台管理您的相关项目。本文将以如何创建完整的积分商城链接为例，为您介绍安全营销运营平台的使用方式。
+腾讯安全营销运营平台提供搭建企业自有积分商城、兑换商品库、运营活动系统等服务，您可以通过控制台管理您的相关项目。本文将为您介绍安全营销运营平台的使用方式。
 
 ## 步骤1：登录控制台
 登录 [安全营销运营平台控制台](https://console.cloud.tencent.com/smop)。
@@ -18,6 +17,52 @@
 
 ## 步骤3：根据运营需求配置对应模块功能
 安全营销运营平台提供丰富的模块内容，可配置在产品商城页面中，例如页面签到、积分任务、商品库存设置及活动管理等。
+
+### 商品配置
+1. 在  [安全营销运营平台控制台](https://console.cloud.tencent.com/smop) 的左侧导航中，选择**我的资源** >**企业总库存**，并选择选择所需产品。
+![](https://qcloudimg.tencent-cloud.cn/raw/53465a1d779415dc524ccf41128af0b5.png)
+2. 在企业总库存页面，支持如下三种商品入库方式。
+
+#### 方式1：用户自行上传
+1. 在企业总库存页面，单击**添加商品**，进入添加资源页面。
+2. 在添加资源页面，选择资源用途，并配置相关参数，单击**下一步**。
+![](https://qcloudimg.tencent-cloud.cn/raw/7ddbaed7adbc638296cbec3a8376f238.png)
+**参数说明：**
+ - 积分运营：可添加实物、优惠券、现金红包等权益商品。
+ - 电商商城：可添加企业销售的商品。
+3. 在添加资源页面。输入配置项信息，单击**完成**。
+ ![](https://qcloudimg.tencent-cloud.cn/raw/1ac87d00ba6def8f50964063d41845c4.png)
+3. 商品添加完成后，默认上线，单击**分配库存**进入分配库存阶段。
+![](https://qcloudimg.tencent-cloud.cn/raw/a8b11688b01de3c33877e558a8d16a72.png)
+
+#### 方式2：使用腾讯提供的免费库存
+1. 在企业总库存页面，在库存下拉框中选择**可用腾讯库存** > **免费库**。
+![](https://qcloudimg.tencent-cloud.cn/raw/4b1e2a1e3185e5278c47c148cb9728c0.png)
+2. 在企业总库存页面，选择需要加入库存的商品，单击**分配库存**。
+![](https://qcloudimg.tencent-cloud.cn/raw/6b79a5729b7dbb5a65300fc16b514c23.png)
+3. 在分配库存域名，修改相关参数，单击**确认分配**，即可将商品加入对应的子库存中。
+
+#### 方式3：采购腾讯提供的付费库存
+1. 在 [资源中心页面](https://console.cloud.tencent.com/smop/purchase/stockMall)，选择所需商品，单击**立即购买**。
+2. 在立即购买页面，确认购买信息，单击**立即支付**。
+![](https://qcloudimg.tencent-cloud.cn/raw/b62e837c9cd564be146bacc42d5bea56.png)
+3. 完成购买后，在企业总库存页面，将购买的商品分配给对应的产品。
+
+### 库存分配
+1. 在  [安全营销运营平台控制台](https://console.cloud.tencent.com/smop) 的左侧导航中，选择**我的资源** >**企业总库存**，并选择选择所需产品。
+![](https://qcloudimg.tencent-cloud.cn/raw/53465a1d779415dc524ccf41128af0b5.png)
+2. 在企业总库存页面，查看自有总库存所有商品情况、免费库所有商品、采购库已购商品。
+3. 在企业总库存页面，选择需要加入库存的商品，单击**分配库存**。
+![](https://qcloudimg.tencent-cloud.cn/raw/6b79a5729b7dbb5a65300fc16b514c23.png)
+4. 在分配库存域名，修改相关参数，不同的商品类型配置的参数有所不同：
+   - 实物奖
+   - 优惠券
+   - 积分
+   - CDK 码
+   - 微信现金红包
+   - 电商商城
+5. 信息填写完成后，单击**确认分配**，自动返回“产品子库存”分配列表页面。
+6. 已分配商品默认上线，商品上线才能进入 **[商品管理](https://console.cloud.tencent.com/smop/mall/act_create_index)** > **活动管理**上线的列表中。
 
 ### 页面签到及积分任务设置[](id:step1)
 1. 在  [安全营销运营平台控制台](https://console.cloud.tencent.com/smop) 的左侧导航中，选择**积分任务** > **任务模板**。
