--- a/product/计算与网络/CKafka/产品简介/使用限制.md
+++ b/product/计算与网络/CKafka/产品简介/使用限制.md
@@ -39,8 +39,8 @@
     <tr>
     <tr>
         <td>Consumer group 数量</td>
-        <td>实例级别 Consumer group 数量建议不超过200个，专业版实例可以 <a href='https://cloud.tencent.com/online-service?from=connect-us'>联系我们</a>
-            申请升级到500个。
+        <td>实例级别 Consumer group 数量建议不超过50个，专业版实例可以 <a href='https://cloud.tencent.com/online-service?from=connect-us'>联系我们</a>
+            申请升级。
         </td>
     </tr>
     <tr>
