--- a/product/视频服务/直播/最佳实践/视频直播播放安全.md
+++ b/product/视频服务/直播/最佳实践/视频直播播放安全.md
@@ -104,14 +104,73 @@
 
 ## 几种直播播放安全特点和实施方案的优缺点对比
 
-|  安全方案 | 安全方案    | 特点  | 存在的问题  | 实施复杂度 | 推荐程度 |
-| ------------------- | ------------------- | ------------------- | ------------------- | ---------- | -------- |
-| Refer 鉴权          | 对 HTTP 请求的 Refer 进行鉴权                               | 简单易实施，配置即生效               | 可伪造 Refer 内容                                       | 非常简单   | ⭐⭐      |
-| IP 黑白名单         | 对访问的 IP 进行鉴权                                        | 简单易实施，配置即生效               | 观众 IP 不容易获取，可能经常变化                         | 非常简单   | ⭐⭐⭐   |
-| 播放防盗链          | 加密播放 URL ，对 URL 进行鉴权                              | 简单易实施，配置即生效               | 防盗链有效期不好把控，太长容易盗链，太短时需要频繁获取。 | 非常简单   | ⭐⭐⭐⭐    |
-| 播放防盗链+远程鉴权 | 加密播放 URL ，对 URL 进行鉴权，提供客户自行鉴权过程        | 易实施，需要客户配合开发 token 鉴权  | 比较合适，盗取门槛相对较高                               | 简单       | ⭐⭐⭐⭐⭐   |
-| HLS  加密           | 对播放 URL 加密，同时对流内容加密                           | 易实施，需要客户配合开发 token 鉴权  | 只能对 HLS 协议支持， FLV  不能用                        | 简单       | ⭐⭐⭐⭐     |
-| 行业 DRM 方案       | 对内容加密，也可以对播放 URL 加密，支持软件和硬件级安全保障 | 较复杂，需要播放器开发，兼容问题较多 | 实施复杂，兼容问题多，iOS 和 Android 要分别支持          | 复杂       | ⭐⭐       |
-| 自研加密方案        | 对内容和播放 URL 加密                                       | 较复杂，需要播放器开发，全流程可控   | 私有方案，需要遵循腾讯云通讯协议，无浏览器支持           | 复杂       | ⭐⭐⭐      |
+<table>
+<thead>
+<tr>
+<th>安全方案</th>
+<th>安全方案</th>
+<th>特点</th>
+<th>存在的问题</th>
+<th>实施复杂度</th>
+<th width=15%>推荐程度</th>
+</tr>
+</thead>
+<tbody><tr>
+<td>Refer 鉴权</td>
+<td>对 HTTP 请求的 Refer 进行鉴权</td>
+<td>简单易实施，配置即生效</td>
+<td>可伪造 Refer 内容</td>
+<td>非常简单</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/db06806d3c2d498f1570dd7fc7b23d3c.png" alt=""></td>
+</tr>
+<tr>
+<td>IP 黑白名单</td>
+<td>对访问的 IP 进行鉴权</td>
+<td>简单易实施，配置即生效</td>
+<td>观众 IP 不容易获取，可能经常变化</td>
+<td>非常简单</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/3acfa03933355c32db2a4aa6ca0dba42.png" alt=""></td>
+</tr>
+<tr>
+<td>播放防盗链</td>
+<td>加密播放 URL ，对 URL 进行鉴权</td>
+<td>简单易实施，配置即生效</td>
+<td>防盗链有效期不好把控，太长容易盗链，太短时需要频繁获取。</td>
+<td>非常简单</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/80eaa06d57c4beb41696b01a8aea0146.png" alt=""></td>
+</tr>
+<tr>
+<td>播放防盗链+远程鉴权</td>
+<td>加密播放 URL ，对 URL 进行鉴权，提供客户自行鉴权过程</td>
+<td>易实施，需要客户配合开发 token 鉴权</td>
+<td>比较合适，盗取门槛相对较高</td>
+<td>简单</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/edc38d2cbee1420fbc83de696e1e9079.png" alt=""></td>
+</tr>
+<tr>
+<td>HLS  加密</td>
+<td>对播放 URL 加密，同时对流内容加密</td>
+<td>易实施，需要客户配合开发 token 鉴权</td>
+<td>只能对 HLS 协议支持， FLV  不能用</td>
+<td>简单</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/80eaa06d57c4beb41696b01a8aea0146.png" alt=""></td>
+</tr>
+<tr>
+<td>行业 DRM 方案</td>
+<td>对内容加密，也可以对播放 URL 加密，支持软件和硬件级安全保障</td>
+<td>较复杂，需要播放器开发，兼容问题较多</td>
+<td>实施复杂，兼容问题多，iOS 和 Android 要分别支持</td>
+<td>复杂</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/db06806d3c2d498f1570dd7fc7b23d3c.png" alt=""></td>
+</tr>
+<tr>
+<td>自研加密方案</td>
+<td>对内容和播放 URL 加密</td>
+<td>较复杂，需要播放器开发，全流程可控</td>
+<td>私有方案，需要遵循腾讯云通讯协议，无浏览器支持</td>
+<td>复杂</td>
+<td><img src="https://qcloudimg.tencent-cloud.cn/raw/3acfa03933355c32db2a4aa6ca0dba42.png" alt=""></td>
+</tr>
+</tbody></table>
 
   
