--- a/product/互联网中间件/腾讯云微服务引擎/购买指南/计费概述.md
+++ b/product/互联网中间件/腾讯云微服务引擎/购买指南/计费概述.md
@@ -15,7 +15,7 @@
 
 ## 计费项与费用说明
 
-注册配置中心 zookeeper 和 nacos费用包括**引擎实例费用**和**公网流量费用**两部分组成。
+注册配置中心 zookeeper 和 nacos 费用包括**引擎实例费用**和**公网流量费用**两部分组成。
 
 ## 引擎实例费用
 
@@ -41,7 +41,7 @@
 
 **计费公式**：引擎实例费用 = 引擎规格单价 × 小时 × 节点数。
 
-**计费示例**：您选了 2核4GB 规格的标准版zookeeper引擎，节点数为3，实例运行时间为1个月，那么总费用为190 × 1 × 3 = 570元。
+**计费示例**：您选了 2核4GB 规格的标准版 zookeeper 引擎，节点数为3，实例运行时间为1个月，那么总费用为190 × 1 × 3 = 570元。
 
 ::: 
 ::: nacos
@@ -121,7 +121,7 @@
 |≤5Mbps|0.044|
 |>5Mbps|0.16|
 
-**计费示例**：假设您选择了按小时带宽计费模式,购买了6Mbps的固定带宽，则总费用为： 5Mbps * 0.044元/Mbps/小时 + （6Mbps - 5Mbps） * 0.16元/Mbps/小时 = 0.38元/小时。
+**计费示例**：假设您选择了按小时带宽计费模式,购买了6Mbps的固定带宽，则总费用为： 5Mbps × 0.044元/Mbps/小时 +（6Mbps - 5Mbps）× 0.16元/Mbps/小时 = 0.38元/小时。
 
 
 
