--- a/product/教育/腾讯教育智脑/常见问题.md
+++ b/product/教育/腾讯教育智脑/常见问题.md
@@ -1,5 +1,5 @@
 ### 腾讯教育智脑的应用场景有哪些？
-腾讯教育智脑主要包含学区学位预警，体质健康分析，防疫大数据，综合素质评价四个场景。详情请参见 [应用场景]()。
+腾讯教育智脑主要包含学区学位预警，体质健康分析，防疫大数据，综合素质评价四个场景。详情请参见 [应用场景](https://cloud.tencent.com/document/product/1565/71284)。
 
 ### 各业务模型提供什么样的客户端？
 目前本产品包含大屏端、PC端、移动端等不同端口，根据客户需求可提供对应端口。
