docs: 北极星独立控制台后文档优化

--- a/product/互联网中间件/腾讯云微服务引擎/服务治理中心/控制台操作指南/北极星鉴权.md
+++ b/product/互联网中间件/腾讯云微服务引擎/服务治理中心/控制台操作指南/北极星鉴权.md
@@ -75,8 +75,8 @@
 	- 子用户没有创建资源的情况下，默认策略中资源为空。
 	- 用户创建资源后，自动添加资源至默认策略。
 	- 删除资源时，引擎将自动把该资源从默认策略中删除。
-5. 如果之前向Polarismesh 引擎实例导入过腾讯云子账户，建议使用北极星主账户进行修改相关子账户的登录密码。已有子账户的登录信息如下
-    - 用户名：腾讯云子账户用户名称
+5. 如果之前向Polarismesh 引擎实例导入过腾讯云子账户，建议尽快使用北极星主账户修改已有子账户的登录密码。已有子账户的登录信息如下
+    - 用户名：**{ 腾讯云子账户用户名称 }**
     - 密码：polarismesh@2022
 
 
