--- a/product/存储与CDN/对象存储 4.0/开发者指南/批量处理/批量处理操作/批量恢复归档对象.md
+++ b/product/存储与CDN/对象存储 4.0/开发者指南/批量处理/批量处理操作/批量恢复归档对象.md
@@ -1,4 +1,6 @@
-批量恢复归档操作可以用于恢复清单中归档存储类型的对象。该操作支持自定义配置 POST Object restore 的相关参数，这些配置信息会影响到副本的恢复时间和过期时间。有关 POST Object restore 的更多介绍，请参见 [POST Object restore](https://cloud.tencent.com/document/product/436/12633)。
+批量恢复归档操作可以用于恢复清单中归档类型的对象。该操作支持自定义配置 POST Object restore 的相关参数，这些配置信息会影响到副本的恢复时间和过期时间。有关 POST Object restore 的更多介绍，请参见 [POST Object restore](https://cloud.tencent.com/document/product/436/12633)。
+
+恢复操作支持两种归档类型：归档存储类型和深度归档存储类型。关于这两种类型的更多介绍，请参见 [存储类型概述](https://cloud.tencent.com/document/product/436/33417)。
 
 要创建批量恢复归档任务，需指定以下两个参数：
 
