--- a/product/安全服务/主机安全/产品简介/功能介绍与版本比较.md
+++ b/product/安全服务/主机安全/产品简介/功能介绍与版本比较.md
@@ -226,7 +226,7 @@
 </tr>
 <tr>
 <td>旗舰重保</td>
-<td>提供7*24小时安全监控，提供护网或特殊时期的重点保护服务，安全专家进行一对一服务。</td>
+<td>提供7*24小时安全监控，提供重保或特殊时期的重点保护服务，安全专家进行一对一服务。</td>
 <td>×<br>增值计费</td>
 <td>×<br>增值计费</td>
 <td>×<br>增值计费</td>
