--- a/product/存储与CDN/内容分发网络/快速入门/域名归属权验证.md
+++ b/product/存储与CDN/内容分发网络/快速入门/域名归属权验证.md
@@ -20,7 +20,7 @@
 2. 单击**verification.html**，下载该验证文件。
 ![](https://qcloudimg.tencent-cloud.cn/raw/2335585e86adbc25023359cb3eb7cdbb.png)
 3. 将验证文件上传到域名源站服务器（例如您的 CVM、COS、阿里 ECS、阿里 OSS 等）的根目录，确认可通过该域名的二级域名访问。
-4. 单击**验证**，若该访问 URL 链接访问到的文件内容是否与我们的记录值一致，则验证通过。
+4. 单击**验证**，若该访问 URL 链接访问到的文件内容与我们的记录值一致，则验证通过。
 
 
 ## API 操作步骤
