--- a/product/监控与管理/云监控/什么是腾讯云云监控？/使用限制.md
+++ b/product/监控与管理/云监控/什么是腾讯云云监控？/使用限制.md
@@ -58,4 +58,4 @@
 ## 权限控制
 
 任何具有腾讯云账号的用户均可以使用云监控服务。
-云监控有独立的权限控制，主账号可以查看所有服务的监控以及告警信息、子账号默认没有任何权限，如需了解更多权限信息请参见 [访问管理](https://cloud.tencent.com/document/product/248/45428)。
+云监控有独立的权限控制，主账号可以查看所有服务的监控以及告警信息、子账号默认没有任何权限，如需了解更多权限信息请参考 [访问管理](https://cloud.tencent.com/document/product/248/45428)。
