--- a/product/监控与管理/云监控/什么是腾讯云云监控？/产品优势.md
+++ b/product/监控与管理/云监控/什么是腾讯云云监控？/产品优势.md
@@ -19,7 +19,7 @@
 
 ### 弹性告警设置
 
-支持配置多种指标的告警触发阈值，每个策略可关联不同云产品。设为默认告警策略后，新购买云产品将自动关联该策略。您可自定义告警接收人和发送渠道。
+支持配置多种指标的告警触发阈值，每个策略可关联不同云产品。设为默认告警策略后，新购买云产品将自动关联该策略，您可自定义告警接收人和发送渠道。
 
 ### 灵活告警服务
 
