--- a/product/存储与CDN/日志服务/其他问题.md
+++ b/product/存储与CDN/日志服务/其他问题.md
@@ -32,7 +32,7 @@
 
 ### 单个日志主题最多可采集多少日志？
 
-为应对海量日志采集需求，单个日志主题包含多个主题分区，每个主题分区写请求最大为500QPS，写流量最大为5MB/s。采集日志量较大时，建议开启 [主题分组自动分裂](https://cloud.tencent.com/document/product/614/52204#AutomaticDivision) 功能（默认开启），单个日志主题最大可拥有50个分区，此时单个日志主题的写请求最大为50 \* 500 = 25000QPS，写流量最大为50 \* 5 = 250MB/s。
+为应对海量日志采集需求，单个日志主题包含多个主题分区，每个主题分区写请求最大为500QPS，写流量最大为5MB/s。采集日志量较大时，建议开启 [主题分区自动分裂](https://cloud.tencent.com/document/product/614/52204#AutomaticDivision) 功能（默认开启），单个日志主题最大可拥有50个分区，此时单个日志主题的写请求最大为50 \* 500 = 25000QPS，写流量最大为50 \* 5 = 250MB/s。
 
 此处的写请求及写流量并不能简单的等于日志条数及日志量，日志上传时会将多条日志打包为一个 [日志组](https://cloud.tencent.com/document/product/614/50237) 并进行压缩，实际支持的日志条数及日志量将远大于上述限制。使用 Loglistener 时将自动进行日志打包及压缩，您无需关注具体的打包策略。
 
