--- a/product/计算与网络/云原生分布式云中心/操作指南/分布式应用管理/应用管理.md
+++ b/product/计算与网络/云原生分布式云中心/操作指南/分布式应用管理/应用管理.md
@@ -30,7 +30,7 @@
  - **分发策略**：该资源所关联的分发策略
  - **拓扑图**： 图形化展示该对象所关联的分发策略，目标集群，差异化配置及其他相关的状态信息
  - **基本信息**：展示该 K8s 应用对象的详细信息
-4. 单击**实例列表**标签页，查看该对象在目标集群上运行的实例：
+4. 单击**实例管理**标签页，查看该对象在目标集群上运行的实例：
  ![](https://qcloudimg.tencent-cloud.cn/raw/3e2a960ae147efb764f97b4beb01511f.png)
  - **实例名称**：该K8s资源分发到目标集群上的名称，点击该名称跳转至该应用的详情页面。。
  - **集群**：实例所在目标集群的名称，点击集群名称将跳转至该集群管理页面。
@@ -38,7 +38,7 @@
  - **命名空间**：该实例所在命名空间。
  - **状态**：该实例状态信息。
  - **更新差异化策略**：支持新建、更新和删除差异化策略，**差异化策略**配置说明请查看：[差异化策略](https://cloud.tencent.com/document/product/1517/63258)
-5. 点击**YAML**标签页，查看该资源对象的 YAML 配置。
+5. 单击**YAML**标签页，查看该资源对象的 YAML 配置。
 
 
 ### 修改关联分发策略
