--- a/product/数据库/云数据库SQL Server/快速入门/管理实例.md
+++ b/product/数据库/云数据库SQL Server/快速入门/管理实例.md
@@ -1,6 +1,6 @@
 ## 实例列表页面
 登录 [SQL Server 控制台](https://console.cloud.tencent.com/sqlserver)，在实例列表，可查看实例相关信息，以及管理实例。
-![](https://qcloudimg.tencent-cloud.cn/raw/e98611e684ae02a8043f052ad04154e6.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/56c7e16022551a949db761d33471f9d2.png)
 
 | 功能      | 介绍                                                         |
 | --------- | ------------------------------------------------------------ |
@@ -9,7 +9,7 @@
 | 设置自动续费      | 在实例列表，勾选需要设置自动续费的实例，单击**更多操作** > **设置自动续费**，支持批量设置自动续费（勾选多个实例），单击确定后可在该实例到期后按月自动续费，需确保设备到期时账号余额充足。 |
 | 取消自动续费      | 在实例列表，勾选需要取消自动续费的实例（实例名称前标记有“续”字样的），选择**更多操作** > **取消自动续费**，支持批量取消自动续费（勾选多个实例），单击确定后即可取消自动续费。 |
 | 编辑标签      | 在实例列表上方单击**更多操作** > **编辑标签**，也可在对应实例**操作**列选择**更多** > **编辑标签**，可对实例进行标签管理，如没有创建过标签可单击**标签管理**前往新建。 |
-| 升级      | 在实例列表，您可以对数据库实例进行配置调整，支持实例升级和容灾方式调整，详细介绍请参见 [调整实例规格](https://cloud.tencent.com/document/product/238/43233)。 |
+| 配置调整      | 在实例列表，您可以对数据库实例进行配置调整，支持实例升级和容灾方式调整，详细介绍请参见 [调整实例规格](https://cloud.tencent.com/document/product/238/43233)。 |
 | 发布订阅      | 在实例列表，对应实例操作列选择**更多** > **发布订阅**，可通过发布订阅，满足业务的数据复制和同步需求。 |
 | 销毁/退货 | 在实例列表，选择**更多** > **销毁/退货**，可以对数据库实例进行销毁/退货，详细介绍请参见 [销毁实例](https://cloud.tencent.com/document/product/238/43225)。 |
 | 转为包年包月 | 对按量计费模式的实例，支持一键转包年包月，在实例列表**操作**列单击**更多** > **转包年包月**，选择时长，阅读规则后单击确定即可完成。 |
@@ -31,5 +31,5 @@
 | 只读实例   | 在只读实例页面，您可以创建一个或多个只读实例，以支持用户的读写分离和一主多从应用场景，可显著提高用户数据库的读负载能力，详细介绍请参见 [只读实例](https://cloud.tencent.com/document/product/238/43227)。 |
 | 备份管理   | 在备份恢复页面，您可以进行手动创建备份、下载备份、设置定时备份、还原备份以及回档操作，详细介绍请参见 [备份管理](https://cloud.tencent.com/document/product/238/43296)。 |
 | 慢查询日志 | 在操作日志页面，您可以下载慢查询日志。 |
-| 参数设置 | 在实例参数配置页，您可查看和修改部分参数，并可查询参数修改历史。详细介绍请参见 [设置实例参数](https://cloud.tencent.com/document/product/238/59255)。 |
+| 参数配置 | 在实例参数配置页，您可查看和修改部分参数，并可查询参数修改历史。详细介绍请参见 [设置实例参数](https://cloud.tencent.com/document/product/238/59255)。 |
 
