--- a/product/监控与管理/云监控/最佳实践/批量资源监控场景（云服务器）.md
+++ b/product/监控与管理/云监控/最佳实践/批量资源监控场景（云服务器）.md
@@ -77,15 +77,15 @@
 
 ## 步骤4：图表高效分析
 
-1. 使用模版变量动态分析指标。
-   模版变量为用户实现在相同的 Dashboard 中动态切换不同的数据源，用户可以动态选择模版变量捆绑的标签值，随时在同一套图表中展示不同的数据。例如，我们可以对前文配置的**前端-基础 CPU 平均使用率**进行改造，目标图表为可以动态改变数据源实例的**模版变量-基础 CPU 平均使用率**，如下步骤：
-   1. 新增模版变量`$帝企鹅业务实例ID`，关联标签为`云服务器-基础监控的实例`，具体新增步骤请参看 [配置模版变量](https://cloud.tencent.com/document/product/248/47226)，配置完成后可在 Dashboard 左上角看到值为空的模版变量。
+1. 使用模板变量动态分析指标。
+   模板变量为用户实现在相同的 Dashboard 中动态切换不同的数据源，用户可以动态选择模板变量捆绑的标签值，随时在同一套图表中展示不同的数据。例如，我们可以对前文配置的**前端-基础 CPU 平均使用率**进行改造，目标图表为可以动态改变数据源实例的**模板变量-基础 CPU 平均使用率**，如下步骤：
+   1. 新增模板变量`$帝企鹅业务实例ID`，关联标签为`云服务器-基础监控的实例`，具体新增步骤请参看 [配置模板变量](https://cloud.tencent.com/document/product/248/47226)，配置完成后可在 Dashboard 左上角看到值为空的模板变量。
       ![](https://main.qcloudimg.com/raw/24785d8f65d2dd3ad3e3b827529da367.jpg)
    2. 复制图表**前端-基础 CPU 平均使用率**到当前 Dashboard。
       ![](https://main.qcloudimg.com/raw/29c08a5a4e457f6ef3ece6c6f684278c.jpg)
-   3. 编辑其中一个**前端-基础 CPU 平均使用率**图表，更改名称为**模版变量-基础 CPU 平均使用率**，使用模版变量`$帝企鹅业务实例ID`作为筛选条件，此时未选择模版变量的标签值，图表预览页面为“暂无数据”，保存图表。
+   3. 编辑其中一个**前端-基础 CPU 平均使用率**图表，更改名称为**模板变量-基础 CPU 平均使用率**，使用模板变量`$帝企鹅业务实例ID`作为筛选条件，此时未选择模板变量的标签值，图表预览页面为“暂无数据”，保存图表。
       ![](https://main.qcloudimg.com/raw/6d691df10474d371478c4bb07b954b25.jpg)
-   4. 在 Dashboard 页面选择或填写模版变量`$帝企鹅业务实例ID`的标签值，即可动态查看图表数据：
+   4. 在 Dashboard 页面选择或填写模板变量`$帝企鹅业务实例ID`的标签值，即可动态查看图表数据：
       - 选择两台实例
       ![](https://main.qcloudimg.com/raw/a402d7ad6d351b0cdb7da767a19cd415.jpg)
       - 选择三台实例
