--- a/product/安全服务/态势感知/操作指南/资产中心/互联网攻击面测绘.md
+++ b/product/安全服务/态势感知/操作指南/资产中心/互联网攻击面测绘.md
@@ -2,7 +2,7 @@
 
 ## 测绘授权
 1. 登录 [安全运营中心控制台](https://console.cloud.tencent.com/ssav2/vulner)，在左侧导航栏，单击**互联网攻击面测绘**，进入互联网攻击面测绘页面。
-2. 首次进入互联网攻击面测绘页面时，系统将提示用户是否授权安全运营中心获取云防火墙和 WEB 应用防火墙的实例配置信息。用户可选择允许，并打单击**确认**。
+2. 首次进入互联网攻击面测绘页面时，系统将提示用户是否授权安全运营中心获取云防火墙和 WEB 应用防火墙的实例配置信息。用户可选择允许，并单击**确认**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/508f53eca9f05e82a5b6af754c34b624.png)
  - 用户可以不勾选允许，此时测绘功能的安全防护状态检查将无法执行，除此以外的其他互联网攻击面测绘功能依然能够良好运行。
  ![](https://qcloudimg.tencent-cloud.cn/raw/ef78cecebe7ad06f6cb526dad48f6e62.png)
