--- a/product/安全服务/态势感知/操作指南/资产中心/互联网攻击面测绘.md
+++ b/product/安全服务/态势感知/操作指南/资产中心/互联网攻击面测绘.md
@@ -17,7 +17,7 @@
 ## 结果总览
 在互联网攻击面测绘页面，用户可查看公网 IP 关联云资源分布、暴露服务端口分布和30天内暴露互联网端口趋势。
  - 公网 IP 关联云资源分布：安全运营中心可识别用户公网 IP 数量，以及使用这些 IP 的资产数量，可帮助用户了解公网 IP 整体分布情况。
- - 暴露服务端口分布：用户可在第一次测绘任务执行成功后，可查看腾讯公有云上暴露的服务端口的处理建议分布情况，这将帮助可以了解整体的互联网攻击面情况。
+ - 暴露服务端口分布：用户在第一次测绘任务执行成功后，可查看腾讯公有云上暴露的服务端口的处理建议分布情况，这将帮助用户了解整体的互联网攻击面情况。
  - 30天内暴露互联网端口趋势：系统可记录最近30天内每天新增的测绘结果变化情况。
  
 ![](https://qcloudimg.tencent-cloud.cn/raw/af16e3975f21c2d5126f010e2f3713d9.png)
