--- a/product/安全服务/态势感知/操作指南/云安全配置管理/配置检查策略.md
+++ b/product/安全服务/态势感知/操作指南/云安全配置管理/配置检查策略.md
@@ -3,7 +3,7 @@
 1. 登录 [安全运营中心控制台](https://console.cloud.tencent.com/ssav2/config)，在左侧导航栏，单击**云安全配置管理** > **配置检查策略**，进入配置检查策略页面。
 2. 初始状态下，云安全配置检查策略包括以下两个策略：
    - 腾讯云默认安全规范检查：系统内置的检查策略，默认是启用状态。检查范围是全部资产，配置检查项是全部检查项。
-   - 老版本配置检查迁移策略：针对老版本用户用于迁移的自定义配置检查策略，对于老版本用户默认是启用状态，系统内置的腾讯云默认安全规范检查策略是停用状态。策略周期与老版本中配置的检查时间相同。配置检查项是全部检查项。
+   - 老版本配置检查迁移策略：针对老版本用户用于迁移的自定义配置检查策略，默认是启用状态，系统内置的腾讯云默认安全规范检查策略是停用状态。策略周期与老版本中配置的检查时间相同。配置检查项是全部检查项。
   ![](https://qcloudimg.tencent-cloud.cn/raw/0efdbeb9b411e46454409f872f304ba1.png)
 	
 ## 检索策略
