--- a/product/计算与网络/云原生分布式云中心/操作指南/分布式应用管理/应用管理.md
+++ b/product/计算与网络/云原生分布式云中心/操作指南/分布式应用管理/应用管理.md
@@ -52,7 +52,7 @@
 
 1. 登录 [云原生分布式云中心控制台](https://console.cloud.tencent.com/tdcc)，进入**分布式应用管理** > **应用管理**页面。
 2. 单击**编辑YAML**，在弹出的对话框中编辑该对象的配置。
-3. 单击**保存**，修改后的配置将自动根据分发策略更新至**所有**目标集群。
+3. 单击**完成**，修改后的配置将自动根据分发策略更新至**所有**目标集群。
 
 
 ### 配置差异化策略
