--- a/product/安全服务/态势感知/操作指南/威胁告警.md
+++ b/product/安全服务/态势感知/操作指南/威胁告警.md
@@ -23,7 +23,7 @@
    - **急需关注**
 经过安全运营中心分析后，将判断为已经造成资产失陷或有较大可能造成资产失陷的告警筛选出来，需要用户关注并进行逐个排查处置。当告警已经分析或处理完毕，可关闭告警，关闭后的告警将不再出现在急需关注中。
    - **重保监控**
-安全运营中心会将无法排除失陷风险的告警都筛选出来，这些告警都具有潜在的不良影响。该筛选模式下会包含急需关注告警。当告警已经分析或处理完毕，可关闭告警，关闭后的告警将不再出现在急需关注中。
+安全运营中心会将无法排除失陷风险的告警都筛选出来，这些告警都具有潜在的不良影响。该筛选模式下会包含急需关注告警。当告警已经分析或处理完毕，可关闭告警，关闭后的告警将不再出现在重保监控中。
    - **全量告警**
 不建议作为运营使用，该场景主要面向审计场景，或是怀疑漏报时进行查询使用。这种情况下告警量大，往往难以进行有效的逐一分析。所有关闭后的告警仅会在此处显示。
 2. 在快速筛选区的下半部分，可以通过告警来源和告警类别来筛选告警记录。
