--- a/product/安全服务/态势感知/操作指南/威胁告警.md
+++ b/product/安全服务/态势感知/操作指南/威胁告警.md
@@ -39,7 +39,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/fd43a856e14a5a4557655b62f9573def.png)
 
 #### 排序
-单击告警列表的表头“告警名称/时间”，可以进行按照告警名称排序，也可以按照告警时间的升序/倒序排列。
+单击告警列表的表头“告警名称/时间”，可以按照告警名称进行排，也可以按照告警时间的升序/倒序排列。
 ![](https://qcloudimg.tencent-cloud.cn/raw/e01a6bf037b7b7fd922179ca8d9fff24.png)
 
 #### 筛选
