--- a/product/安全服务/BGP 高防包/高防包（新）/1 产品简介/产品优势.md
+++ b/product/安全服务/BGP 高防包/高防包（新）/1 产品简介/产品优势.md
@@ -1,4 +1,4 @@
-DDoS高防包仅适用于腾讯云产品，包含 CVM、CLB、WAF、NAT 网关、VPN 网关、轻量应用服务器等云产品提升 DDoS 防护能力的付费安全服务，具有以下优势：
+DDoS高防包仅适用于腾讯云产品，包含 CVM、CLB、WAF、NAT 网关、轻量应用服务器等云产品，为其提供提升 DDoS 防护能力的付费安全服务，具有以下优势：
 ## 一键接入，零变更
 无需进行业务变更，接入配置便捷，购买 DDoS 高防包后，仅需绑定需要防护的云产品 IP 地址即可使用，几分钟即可生效。
 
