--- a/product/数据库/数据传输服务DTS/数据迁移(NewDTS)/任务管理/06 解隔离（恢复）任务.md
+++ b/product/数据库/数据传输服务DTS/数据迁移(NewDTS)/任务管理/06 解隔离（恢复）任务.md
@@ -5,7 +5,8 @@
 ## 适用范围
 
 - 采用按量计费的迁移任务。
-- 仅新版本迁移任务支持自助解隔离，老版本迁移任务如果需要解隔离，请 [提交工单](https://console.cloud.tencent.com/workorder/category) 处理（需要在销毁7天内，7天后无法恢复）。
+- 仅新版本 DTS 迁移任务支持用户自助解隔离，老版本 DTS 迁移任务不支持用户自助解隔离。
+
 
 ## 操作步骤
 
