--- a/product/开发者工具/云端开发环境 Cloud Studio/快速入门.md
+++ b/product/开发者工具/云端开发环境 Cloud Studio/快速入门.md
@@ -1,6 +1,6 @@
 ## 快速启动项目
 ### 步骤1：登录 Cloud Studio 的控制台
-腾讯云官网控制台中进行登录，即可打开 Cloud Studio 控制台。
+[腾讯云官网控制台](https://console.cloud.tencent.com/cloudstudio?buffet-config=413d814ff2&ticketId=132203) 中进行登录，即可打开 Cloud Studio 控制台。
 ![](https://qcloudimg.tencent-cloud.cn/raw/9f2b2f952abc410bd2d82519b03cc548.png)
  
 ### 步骤2：进入预置开发环境
