--- a/product/数据库/云数据库SQL Server/操作指南/维护管理实例/多可用区容灾.md
+++ b/product/数据库/云数据库SQL Server/操作指南/维护管理实例/多可用区容灾.md
@@ -34,6 +34,8 @@
 >- 多可用区资源有限，如遇资源不足无法购买，请通过 [在线支持](https://cloud.tencent.com/online-service?from=connect-us) 咨询。
 >- 升级多可用区过程涉及实例迁移，在迁移过程中不影响原实例正常使用，迁移完成后进行切换，会有几秒短暂网络中断。
 >
-![](https://main.qcloudimg.com/raw/81a8004ef5267799e7ebe0daeb1cba18.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/2cde040d40fcefad89e4e1070bfedb47.png)
 3. 单击**确认**，购买完成后即可完成多可用区升级。
- 
+
+## 相关文档
+如需将实例迁移至同一地域内的其它可用区，可参见 [跨可用区迁移](https://cloud.tencent.com/document/product/238/62980)。
