--- a/product/大数据与AI/数据开发平台WeData/操作指南/数据运营/数据发现.md
+++ b/product/大数据与AI/数据开发平台WeData/操作指南/数据运营/数据发现.md
@@ -22,7 +22,7 @@
 <td>描述</td>
 <td>选填，对采集任务的描述信息。</td>
 </tr><tr>
-<td>项目</td><td>数据源所属项目名称。</td>
+<td>项目名称</td><td>数据源所属项目名称。</td>
 </tr><tr>
 <td>数据源</td><td>采集任务对应的数据源名称，该数据源可在项目管理模块内查看。</td>
 </tr><tr>
