--- a/product/安全服务/BGP 高防包/高防包（新）/4 操作指南/防护概览.md
+++ b/product/安全服务/BGP 高防包/高防包（新）/4 操作指南/防护概览.md
@@ -74,7 +74,7 @@
 >?支持查询最多180天以内的攻击流量信息及 DDoS 攻击事件。
 >
 ![](https://qcloudimg.tencent-cloud.cn/raw/deffc375bbcb91645b03ce5ddb428c43.png)
-2. 查看该时间范围内所选择的高防包防护遭受的攻击情况，包括网络攻击流量带宽 / 攻击包速率趋势。
+2. 查看该时间范围内所选择的高防包防护遭受的攻击情况，包括网络攻击流量带宽和攻击包速率趋势。
 ![](https://qcloudimg.tencent-cloud.cn/raw/a93c854dd4d2ffb4c1439954ba4c6634.png)
 3. 在近期安全事件模块中，可展示所遭受的 DDoS 攻击事件。
  - 选择所需事件，单击**查看详情**，右侧将展示该事件的具体详情。支持查看攻击源信息、攻击源地区、产生的攻击流量及攻击包量大小等。供用户进行 DDoS 攻击分析及溯源支撑。
