--- a/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
+++ b/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
@@ -51,7 +51,7 @@ SCDN安全加速套餐 计费采用预付费包年包月模式，套餐按月购
 **发放量公式：**每月1号购买套餐，将获得全额发放量；非每月1号下单，则当月折算发放量 = 剩余有效天数/当月有效天数 \* 全额发放量。
 **发放示例：**您在2022-04-08 16:24:06 购买SCDN增强版套餐（1个月有效期），因此获得：
 （1）安全防护流量 = 22/30 \* 10000GB =7333.33 GB ；
-（2）WEB防护请求数 = 22/30 \* 1000 =733.33 万次 ；
+（2）Web 防护请求数 = 22/30 \* 1000 =733.33 万次 ；
 （3）BOT防护请求数 = 22/30 \* 1000 =733.33 万次 。
 
 >?
