修改内容审核 API

--- a/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/内容审核接口/视频审核/提交视频审核任务.md
+++ b/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/内容审核接口/视频审核/提交视频审核任务.md
@@ -4,8 +4,8 @@
 
 该接口支持情况如下：
 >? 
-> - 支持审核腾讯云 COS 上的图片文件。
-> - 支持审核第三方云存储厂商的图片 URL。
+> - 支持审核腾讯云 COS 上的视频文件。
+> - 支持审核第三方云存储厂商的视频 URL。
 >
 - 支持对视频文件进行自动检测，从 OCR 文本识别、物体检测（实体、广告台标、二维码等）、图像识别及音频审核四个维度，通过深度学习技术，识别视频中的违规内容。
 - 支持设置回调地址 Callback 获取检测结果，或通过 [查询视频审核任务结果接口](https://cloud.tencent.com/document/product/460/46926) 主动轮询获取审核结果详情。
@@ -31,7 +31,6 @@
 
 - 视频文件大小支持：**文件 < 5GB**。
 - 视频文件支持格式：flv、mkv、mp4 、rmvb、avi、wmv、3gp、mov、m3u8、m4v 等。
-- 视频文件支持的访问方式：腾讯云对象存储。
 - 支持用户配置审核视频画面或视频声音。
 
 ## 请求
