--- a/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/内容审核接口/音频审核/提交音频审核任务.md
+++ b/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/内容审核接口/音频审核/提交音频审核任务.md
@@ -4,8 +4,8 @@
 
 该接口支持情况如下：
 >? 
-> - 支持审核腾讯云 COS 上的图片文件。
-> - 支持审核第三方云存储厂商的图片 URL。
+> - 支持审核腾讯云 COS 上的音频文件。
+> - 支持审核第三方云存储厂商的音频 URL。
 >
 - 支持对音频文件进行自动检测，从 ASR 语音文本识别、色情呻吟两个维度，通过深度学习技术识别音频中的违规内容。
 - 支持设置回调地址 Callback 获取检测结果，或通过 [查询音频审核任务结果接口](https://cloud.tencent.com/document/product/460/53396) 主动轮询获取审核结果详情。
@@ -27,7 +27,6 @@
 - 音频文件时长支持：**< 3小时**。
 - 音频码率类型支持：128Kbps - 256Kbps。
 - 音频文件支持格式：mp3、wav、aac、flac、amr、3gp、m4a、wma、ogg、ape。
-- 音频文件支持的访问方式：音频文件链接、腾讯云对象存储。
 - 音频文件内容语言支持：普通话、英语、粤语。
 - 当输入为视频文件时，支持分离视频文件音轨，并对音频内容进行独立审核。
 
