--- a/product/大数据与AI/万象优图2.0/API 文档/内容审核/文本审核/提交文本审核任务.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/内容审核/文本审核/提交文本审核任务.md
@@ -6,8 +6,8 @@
 该接口支持情况如下：
 
 >? 
-> - 支持审核腾讯云 COS 上的图片文件。
-> - 支持审核第三方云存储厂商的图片 URL。
+> - 支持审核腾讯云 COS 上的文本文件。
+> - 支持直接审核纯文本信息，需要先经过 base64 编码。
 >
 - 支持的文本审核方式：
   - 直接传入文本内容进行审核（仅支持 UTF8 编码）
@@ -33,7 +33,6 @@
 - 文本内容大小支持：当审核的内容为纯文本信息，需要先经过 base64 编码，文本编码前的原文长度不能超过10000个 UTF8 编码字符。
 - 文本文件大小支持：当传入的内容为文本文件时，文件大小不能超过1MB。
 - 文本审核语言支持：目前支持中文、英文、阿拉伯数字的检测。
-- 支持审核的文本方式：纯文本内容、腾讯云对象存储上的文本文件。
 
 ## 请求
 
