--- a/product/数据库/云数据库MongoDB/操作指南/管理实例/调整实例可用区.md
+++ b/product/数据库/云数据库MongoDB/操作指南/管理实例/调整实例可用区.md
@@ -31,9 +31,7 @@ MongoDB 4.2版本不支持调整可用区。
 6. 在**实例详情**的**基本信息**区域，单击**可用区**后面的**调整可用区**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/7c0fd3b1a3f95c9c8e3a3904ffd6aef9.png)
 7. 在**调整可用区**对话框，认真阅读提示信息，确认调整可用区。
-> !
->-  调整可用区会导致主从切换的发生，产生10s左右的闪断。请您在业务低峰期操作。
->-  如果您调整了主节点的可用区，调整完成后请尽快修改网络到新可用区的IP，否则会导致请求的延迟增大。
+> !调整可用区会导致主从切换的发生，产生10s左右的闪断。请您在业务低峰期操作。
 8. 分别在**主节点**、**从节点**后面的下拉列表中，重新设置可用区。
 9. 在**切换时间**后面选择执行切换可用区任务的时间。
   - **调整完成时**：配置完成之后立即执行。
