--- a/product/监控与管理/Prometheus 监控服务/最佳实践/容器服务监控.md
+++ b/product/监控与管理/Prometheus 监控服务/最佳实践/容器服务监控.md
@@ -7,7 +7,7 @@
 
 ## 实践步骤
 
-### 步骤1:购买实例
+### 步骤1：购买实例
 
 1. 登录 [Prometheus 监控服务控制台](https://console.cloud.tencent.com/monitor/prometheus)。
 2. 单击 **新建** ，根据您的需求选择购买地域、存储时长并选择需要关联的 Grafana 实例，若无 Grafana 实例，可参考 [相关操作指引](https://cloud.tencent.com/document/product/1437/62194) 创建（需创建与）。
