--- a/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
+++ b/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
@@ -65,7 +65,7 @@ SCDN安全加速套餐 计费采用预付费包年包月模式，套餐按月购
 
 | 计费项       | 价格（元/万次请求） | 计费方式     | 计费周期 |
 | :----------- | :------------------ | :----------- | :------- |
-| WEB 弹性防护 | 0.18元              | 按用量后付费 | 小时结算 |
+| Web 弹性防护 | 0.18元              | 按用量后付费 | 小时结算 |
 | BOT 弹性防护 | 0.30元              | 按用量后付费 | 小时结算 |
 
 >? 购买了包含 Web/BOT 防护能力的安全加速套餐，Web/BOT 弹性防护默认开启。
