--- a/product/存储与CDN/日志服务/产品简介/规格说明.md
+++ b/product/存储与CDN/日志服务/产品简介/规格说明.md
@@ -70,10 +70,10 @@
    <td>开启索引时，如果分词过长，仅会对其中前10000个字符建立索引，超出部分无法进行检索，但仍会完整存储日志</td>
  </tr>
  <tr>
-   <td>long 类型字段支持数据范围为-1E15 - 1E15，超出该范围的数据可能会丢失精度或不支持检索</br>超长数值字段索引配置建议：<ul  style="margin: 0;"><li>如果不需要通过数值范围比较来检索该字段，可将该字段存储为text类型</li><li>如果需要通过数值范围比较来检索该字段，可将该字段存储为 double 类型，可能会丢失部分精度</li></ul></td>
+   <td>long 类型字段支持数据范围为-1E15 ~ 1E15，超出该范围的数据可能会丢失精度或不支持检索</br>超长数值字段索引配置建议：<ul  style="margin: 0;"><li>如果不需要通过数值范围比较来检索该字段，可将该字段存储为text类型</li><li>如果需要通过数值范围比较来检索该字段，可将该字段存储为 double 类型，可能会丢失部分精度</li></ul></td>
  </tr>
  <tr>
-   <td>double 类型字段支持数据范围为-1.79E+308 - +1.79E+308，如果浮点数编码位数超过64位，会造成精度丢失</td>
+   <td>double 类型字段支持数据范围为-1.79E+308 ~ +1.79E+308，如果浮点数编码位数超过64位，会造成精度丢失</td>
  </tr>
  <tr>
    <td>日志写入 CLS，到可被检索分析的时延小于1min</td>
