--- a/product/数据库/云数据库SQL Server/产品简介/常用概念.md
+++ b/product/数据库/云数据库SQL Server/产品简介/常用概念.md
@@ -1,12 +1,19 @@
 本文为您介绍本产品相关的常用概念，帮助您更好地选购和使用 SQL Server。
 
+
+- **什么是数据库实例？**
+一个数据库实例（Database Instance）就是一个数据库服务器（Database Server），其中可以建一个或多个数据库（Database），每个数据库中可以建一个或多个表。
+- **什么是主实例、备实例？**
+对于高可用版、集群版实例，对您业务访问的节点称为主实例，同时主实例数据会实时同步到另一个节点（称为备实例）。
+您只能访问主实例，备实例仅作为备份形式存在，不提供业务访问。当主实例故障时，会进行主备切换，整个切换过程对应用而言是无感知的，仅在切换时可能会出现闪断。
+- **什么是只读实例？**
+只读实例是为了实现读取能力的弹性扩展，分担数据库压力。在对数据库有少量写请求，但有大量读请求的应用场景下，单个实例可能无法承受读取压力，甚至对业务产生影响。此种情况下可创建一个或多个只读实例，利用只读实例满足大量的数据库读取需求，增加应用的吞吐量。
+
 - **腾讯云控制台**：基于 Web 的用户界面。
 
 - **地域**：地域是指物理的数据中心。一般情况下，SQL Server 实例应该和云服务器实例位于同一地域，以实现最高的访问性能。
 - **可用区**：可用区是指在某个地域内拥有独立电力和网络的物理区域。同一地域的不同可用区之间没有实质性区别。
 - **多可用区**：是在单可用区的级别上，将同一地域的多个单可用区组合成的物理区域。
-- **实例**：腾讯云上的 SQL Server 数据库资源。
-- **只读实例**：仅提供读功能的实例。
 - **RO 组**：由多个只读实例组成的集合，为只读实例 RO 组。
 - **计费模式**：实例资源的收费方式，分为包年包月和按量计费。
 - **按量计费：**后计费购买，先按需申请资源使用，在结算时会按您的实际资源使用量收取费用。
