--- a/product/计算与网络/容器服务/动态与公告/产品公告/资源配额说明.md
+++ b/product/计算与网络/容器服务/动态与公告/产品公告/资源配额说明.md
@@ -1,5 +1,13 @@
 
 
+<dx-alert infotype="notice" title="2022-04-26">
+截至2022年4月26日，本说明内容已不适用。集群配额限制详情请参见 [资源配额说明](https://cloud.tencent.com/document/product/457/9087#k8s-.E8.B5.84.E6.BA.90.E9.85.8D.E9.A2.9D.E8.AF.B4.E6.98.8E)。
+</dx-alert>
+
+
+
+
+
 自2021年1月13日起，腾讯云容器服务 TKE 系统会向节点数（nodeNum）不超过5个（0 < nodeNum ≤ 5）、大于5个且小于20个（5 < nodeNum < 20）的集群上的命名空间自动应用一组资源配额。您将无法移除这些配额，此资源配额将保护集群控制平面，避免因部署到集群的应用中存在潜在 Bug 而导致其不稳定。
 
 如需检查此配额，您可执行以下命令：
